--- a/data/cards/39618799.yaml
+++ b/data/cards/39618799.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사이버 엔젤－다키니－
   ko_rr: Saibeo Enjel - Dakini
   zh-TW:
-  zh-CN: 电子化天使-荼吉尼-
+  zh-CN: 电子天使－荼吉尼－
 text:
   en: |-
     You can Ritual Summon this card with "Machine Angel Ritual". If this card is Ritual Summoned: You can make your opponent send 1 monster they control to the GY (their choice). If a Ritual Monster you control attacks a Defense Position monster, inflict piercing battle damage to your opponent. Once per turn, during your End Phase: You can target 1 Ritual Monster or 1 "Machine Angel Ritual" in your GY; add it to your hand.
@@ -32,7 +32,7 @@ text:
     "기계천사의 의식"에 의해 의식 소환. ①: 이 카드가 의식 소환에 성공했을 경우에 발동할 수 있다. 상대는 자신 필드의 몬스터 1장을 묘지로 보내야 한다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신의 의식 몬스터가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 상대에게 전투 데미지를 준다. ③: 자신 엔드 페이즈에 자신 묘지의, 의식 몬스터 1장 또는 "기계천사의 의식" 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    效果·仪式：「机械天使的仪式」降临。①：这张卡仪式召唤成功的场合才能发动。对方必须把自身场上1只怪兽送去墓地。②：只要这张卡在怪兽区域存在，自己的仪式怪兽向守备表示怪兽攻击的场合，给与对方为攻击力超过那个守备力的数值的战斗伤害。③：自己结束阶段以自己墓地1只仪式怪兽或者1张「机械天使的仪式」为对象才能发动。那张卡加入手卡。
+    以"机械天使的仪式"降临。①：此卡仪式召唤成功的情况下可以发动。对手必须将自身场上的1只怪兽送至墓地。②：只要此卡存在于怪兽区域，自己的仪式怪兽攻击了守备表示的怪兽的情况下，依攻击力超出该怪兽守备力的数值来给予对手战斗伤害。③：在自己的结束阶段，以自己墓地的1只仪式怪兽或1张"机械天使的仪式"为对象可以发动。将该卡加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
@@ -147,6 +147,11 @@ sets:
     - Super Rare
     - Secret Rare
   - set_number: DP21-KR020
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC025
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
