--- a/data/cards/45247637.yaml
+++ b/data/cards/45247637.yaml
@@ -12,7 +12,7 @@ name:
   ko: 장미의 각인
   ko_rr: Jangmi-ui Gakin
   zh-TW:
-  zh-CN: 蔷薇刻印
+  zh-CN: 蔷薇之刻印
 text:
   en: |-
     Activate this card by banishing 1 Plant monster from your GY, then target 1 face-up monster your opponent controls; equip this card to it. Take control of the equipped monster. Once per turn, during your End Phase: Negate this card's effect until your next Standby Phase.
@@ -32,7 +32,7 @@ text:
     자신 묘지에서 식물족 몬스터 1장을 제외하고, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하여 이 카드를 발동할 수 있다. ①: 장착 몬스터의 컨트롤을 얻는다. ②: 자신 엔드 페이즈에 발동한다. 이 카드의 ①의 효과는 다음 자신 스탠바이 페이즈까지 무효가 된다.
   zh-TW:
   zh-CN: |-
-    从自己墓地把1只植物族怪兽除外，以对方场上1只表侧表示怪兽为对象才能把这张卡发动。①：得到装备怪兽的控制权。②：自己结束阶段发动。这张卡的①的效果直到下次的自己准备阶段无效。
+    从自己的墓地将1只植物族怪兽除外，以对手场上的1只表侧表示怪兽为对象可以发动此卡。①：获得装备怪兽的控制权。②：在自己的结束阶段发动。此卡的①效果直至下一个自己准备阶段为止无效。
 card_type: Spell
 property: Equip
 sets:
@@ -193,6 +193,11 @@ sets:
     rarities:
     - Super Rare
   - set_number: DP21-KR033
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC042
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
