--- a/data/cards/51126152.yaml
+++ b/data/cards/51126152.yaml
@@ -163,6 +163,10 @@ sets:
     set_name: Entry Pack Volume 4
     rarities:
     - Common
+  - set_number: DP21-SC052
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
