--- a/data/cards/56910167.yaml
+++ b/data/cards/56910167.yaml
@@ -211,6 +211,10 @@ sets:
     set_name: Entry Pack Volume 4
     rarities:
     - Super Rare
+  - set_number: DP21-SC050
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
