--- a/data/cards/64442155.yaml
+++ b/data/cards/64442155.yaml
@@ -12,7 +12,7 @@ name:
   ko: 자비심 깊은 기계천사
   ko_rr: Jabisim Gip-eun Gigyeheonsa
   zh-TW:
-  zh-CN: 大慈大悲的机械天使
+  zh-CN: 深怀慈悲的机械天使
 text:
   en: |-
     Tribute 1 "Cyber Angel" Ritual Monster from your hand or field; draw 2 cards, then place 1 card from your hand on the bottom of the Deck. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except Ritual Monsters. You can only activate 1 "Merciful Machine Angel" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드의 "사이버 엔젤" 의식 몬스터 1장을 릴리스하고 발동할 수 있다. 자신은 덱에서 2장 드로우하고, 그 후 패를 1장 골라 덱 맨 아래로 되돌린다. 이 카드의 발동 후, 턴 종료시까지 자신은 의식 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：把自己的手卡·场上1只「电子化天使」仪式怪兽解放才能发动。自己从卡组抽2张，那之后选1张手卡回到卡组最下面。这张卡的发动后，直到回合结束时自己不是仪式怪兽不能特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：解放自己手牌・场上的1只"电子天使"仪式怪兽可以发动。自己从牌组抽2张，然后挑选1张手牌放回牌组最下面。此卡发动后，直至回合结束时为止自己仅可特殊召唤仪式怪兽。
 card_type: Spell
 property: Normal
 series:
@@ -94,6 +93,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DP21-SC018
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
