--- a/data/cards/65664792.yaml
+++ b/data/cards/65664792.yaml
@@ -12,7 +12,7 @@ name:
   ko: 화려한 해피 레이디
   ko_rr: Hwaryeohan Haepi Reidi
   zh-TW:
-  zh-CN: 华丽的鹰身女郎
+  zh-CN: 华丽的神鹰女郎
 text:
   en: |-
     Shuffle 1 "Harpie Lady Sisters" from your Monster Zone into the Deck, then you can Special Summon 3 "Harpie" monsters with different original names, 1 each from your hand, Deck, and GY. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except WIND monsters. If this card you control is destroyed by a "Harpie" card's effect or your opponent's card effect: Add 1 "Harpie" monster from your Deck to your hand. You can only use each effect of "Harpie Lady Elegance" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 "해피 레이디 세자매" 1장을 골라 주인의 덱으로 되돌린다. 그 후, 원래의 카드명이 다른 "해피" 몬스터 3장을, 자신의 패 / 덱 / 묘지에서 각각 1장씩 골라 특수 소환할 수 있다. 이 카드의 발동 후, 턴 종료시까지 자신은 바람 속성 몬스터밖에 특수 소환할 수 없다. ②: 필드의 이 카드가 상대 효과 또는 자신의 "해피" 카드의 효과로 파괴되었을 경우에 발동한다. 덱에서 "해피" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：选自己场上1只「鹰身女郎三姐妹」回到持有者卡组。那之后，可以把3只原本卡名不同的「鹰身」怪兽从自己的手卡·卡组·墓地各选1只特殊召唤。这张卡的发动后，直到回合结束时自己不是风属性怪兽不能特殊召唤。
-    ②：场上的这张卡被对方的效果或者自己的「鹰身」卡的效果破坏的场合发动。从卡组把1只「鹰身」怪兽加入手卡。
+    此卡名的①②效果1回合仅可各使用1次。①：挑选自己场上的1只"神鹰女郎三姐妹"，放回持有者的牌组。然后，可从自己的手牌・牌组・墓地各挑选1只原本卡名不同的"神鹰"怪兽共3只特殊召唤。此卡发动后，直至回合结束时为止自己仅可特殊召唤风属性怪兽。②：场上的此卡因对手的效果或自己"神鹰"卡的效果被破坏的情况下发动。从牌组将1只"神鹰"怪兽加入手牌。
 card_type: Trap
 property: Normal
 series:
@@ -92,6 +90,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR005
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC005
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
