--- a/data/cards/86308219.yaml
+++ b/data/cards/86308219.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 레이디 －봉황의 진－
   ko_rr: Haepi Reidi - Bonghwang-uijin
   zh-TW:
-  zh-CN: 鹰身女郎-凤凰之阵-
+  zh-CN: 神鹰女郎 －凤凰之阵－
 text:
   en: |-
     If you control 3 or more "Harpie Lady" and/or "Harpie Lady Sisters": Target as many monsters your opponent controls as possible, but not more than the total number of "Harpie Lady" and "Harpie Lady Sisters" you control; destroy those targets, and if you do, inflict damage to your opponent equal to the highest original ATK among those destroyed monsters (your choice, if tied). You cannot Special Summon monsters from the Main Deck or Extra Deck, nor conduct your Battle Phase, the turn you activate this card.
@@ -32,7 +32,7 @@ text:
     이 카드를 발동하는 턴에, 자신은 덱 / 엑스트라 덱에서 몬스터를 특수 소환할 수 없으며, 배틀 페이즈를 실행할 수 없다. ①: 자신 필드에 "해피 레이디" "해피 레이디 세자매"가 합계 3장 이상 존재할 경우, 그 수까지 가능한 한 상대 필드의 몬스터를 대상으로 하고 발동할 수 있다. 대상 몬스터를 파괴하고, 파괴한 몬스터 중에서, 원래 공격력이 가장 높은 몬스터의 그 수치만큼의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    自己场上存在3只以上「鹰身女郎」或「鹰身女郎三姐妹」的场合：尽可能选择对方场上存在的怪兽，不超过自己场上存在的「鹰身女郎」和「鹰身女郎三姐妹」的合计数量；破坏那些选择的怪兽，之后，给予对方玩家破坏的那些怪兽中原本攻击力最高数值的伤害。这张卡发动的回合，自己不能从卡组或额外卡组特殊召唤怪兽，不能进行战斗阶段。
+    发动此卡的回合中，自己不可从牌组・额外牌组特殊召唤怪兽，不可进行战斗阶段。①：自己场上有"神鹰女郎"、"神鹰女郎三姐妹"合计3只以上存在的情况下，最多依其数量，以对手场上尽可能多的怪兽为对象可以发动。破坏对象怪兽，给予对手相当于破坏的怪兽中最高的原本攻击力数值的伤害。
 card_type: Spell
 property: Normal
 series:
@@ -120,6 +120,11 @@ sets:
     - Ultra Rare
     - Secret Rare
   - set_number: DP21-KR010
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC013
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
