--- a/data/cards/91946859.yaml
+++ b/data/cards/91946859.yaml
@@ -12,7 +12,7 @@ name:
   ko: 응신의 기계천사
   ko_rr: Eungsin-ui Gigyeheonsa
   zh-TW:
-  zh-CN: 应身之机械天使
+  zh-CN: 应身的机械天使
 text:
   en: |-
     Your "Cyber Angel" Ritual Monsters cannot be destroyed by battle. When you take damage by battle or an opponent's card effect: You can Tribute 1 "Cyber Angel" Ritual Monster from your hand or field; Special Summon 1 "Cyber Angel" Ritual Monster from your hand. (This is treated as a Ritual Summon.) You can only use this effect of "Incarnated Machine Angel" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 마법 & 함정 존에 존재하는 한, 자신의 "사이버 엔젤" 의식 몬스터는 전투로는 파괴되지 않는다. ②: 전투 또는 상대 효과로 자신이 데미지를 받았을 때, 자신의 패 / 필드의 "사이버 엔젤" 의식 몬스터 1장을 릴리스하고 발동할 수 있다. 패에서 "사이버 엔젤" 의식 몬스터 1장을 의식 소환으로 취급하고 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：只要这张卡在魔法与陷阱区域存在，自己的「电子化天使」仪式怪兽不会被战斗破坏。
-    ②：战斗或者对方的效果让自己受到伤害时，把自己的手卡·场上1只「电子化天使」仪式怪兽解放才能发动。从手卡把1只「电子化天使」仪式怪兽当作仪式召唤作特殊召唤。
+    此卡名的②效果1回合仅可使用1次。①：只要此卡存在于魔法与陷阱区域，自己的"电子天使"仪式怪兽不会因战斗被破坏。②：自己因战斗或对手的效果受到伤害时，解放自己手牌・场上的1只"电子天使"仪式怪兽可以发动。从手牌将1只"电子天使"仪式怪兽视为仪式召唤特殊召唤。
 card_type: Spell
 property: Continuous
 series:
@@ -92,6 +90,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR015
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC019
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
