--- a/data/cards/02986553.yaml
+++ b/data/cards/02986553.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 패에서 레벨 4 이하의 식물족 몬스터 1장을 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대는 식물족 몬스터를 공격 대상으로 선택할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功时才能发动。从手卡把1只4星以下的植物族怪兽特殊召唤。②：只要这张卡在怪兽区域存在，对方不能选择植物族怪兽作为攻击对象。
+    ①：此卡召唤成功时可以发动。从手牌将1只等级4以下的植物族怪兽特殊召唤。②：只要此卡存在于怪兽区域，对手不可将植物族怪兽选择为攻击对象。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: DARK
@@ -146,6 +146,11 @@ sets:
     rarities:
     - Super Rare
   - set_number: DP21-KR029
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC035
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
