--- a/data/cards/12181376.yaml
+++ b/data/cards/12181376.yaml
@@ -12,7 +12,7 @@ name:
   ko: 트라이앵글 X 스파크
   ko_rr: Teurai-aenggeul Ekseuteosi Seupakeu
   zh-TW:
-  zh-CN: 三角神迷火花
+  zh-CN: 三角狂欢电光
 text:
   en: |-
     Until the end of this turn, the ATK of all "Harpie Lady Sisters" currently on the field becomes 2700, your opponent cannot activate any Trap Cards, also negate all your opponent's Trap effects on the field.
@@ -32,7 +32,7 @@ text:
     ①: 필드의 모든 "해피 레이디 세자매"의 공격력은 턴 종료시까지 2700 이 된다. 이 턴에, 상대는 함정 카드를 발동할 수 없으며, 상대 필드의 함정 카드의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    ①：场上的全部「鹰身女郎三姐妹」的攻击力直到回合结束时变成2700。这个回合，对方不能把陷阱卡发动，对方场上的陷阱卡的效果无效化。
+    ①：场上所有"神鹰女郎三姐妹"的攻击力直至回合结束时为止变为2700。此回合，对手不可发动陷阱卡，对手场上陷阱卡的效果无效化。
 card_type: Spell
 property: Normal
 series:
@@ -213,6 +213,11 @@ sets:
     rarities:
     - Super Rare
   - set_number: DP21-KR011
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC015
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
