--- a/data/cards/13647631.yaml
+++ b/data/cards/13647631.yaml
@@ -135,6 +135,7 @@ sets:
   - set_number: DP21-SC051
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
