--- a/data/cards/19337371.yaml
+++ b/data/cards/19337371.yaml
@@ -12,7 +12,7 @@ name:
   ko: 히스테릭 사인
   ko_rr: Hiseuterik Sain
   zh-TW: 歇斯底里簽名
-  zh-CN: 歇斯底里的签订
+  zh-CN: 歇斯底里的定约
 text:
   en: |-
     When this card is activated: Add 1 "Elegant Egotist" from your Deck or GY to your hand. During the End Phase, if this card is in the GY because it was sent there from the hand or field this turn: Add up to 3 "Harpie" cards with different names from each other from your Deck to your hand. You can only use 1 "Hysteric Sign" effect per turn, and only once that turn.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡发动时，从我方牌组、墓地挑选1张「萬花筒－華麗分身－」加入手牌。此卡从手牌或场上被送入墓地回合的结束阶段时，从牌组挑选最多3张名称不同、冠有「神鷹」之名的卡牌加入手牌。「歇斯底里簽名」的效果1回合只可发动1次。
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。①：作为这张卡的发动时的效果处理，从自己的卡组·墓地选1张「万华镜-华丽的分身-」加入手卡。②：这张卡从手卡·场上送去墓地的回合的结束阶段发动。从卡组把最多3张「鹰身」卡加入手卡（同名卡最多1张）。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：作为此卡发动时的效果处理，从自己的牌组・墓地挑选1张"万华镜－华丽的分身－"加入手牌。②：此卡从手牌・场上被送至墓地的回合的结束阶段发动。从牌组将最多3张"神鹰"卡加入手牌（同名卡最多1张）。
 card_type: Spell
 property: Continuous
 sets:
@@ -145,6 +145,11 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DP21-SC014
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
