--- a/data/cards/27331568.yaml
+++ b/data/cards/27331568.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드의 "사이버 엔젤" 의식 몬스터 1장을 릴리스하고, 자신 필드의 천사족 / 빛 속성 몬스터 1장을 대상으로 하여 발동할 수 있다. 대상 몬스터의 공격력 / 수비력은 턴 종료시까지, 릴리스한 몬스터의 레벨 × 200 올린다. 이 턴에, 대상 몬스터가, 엑스트라 덱에서 특수 소환된 상대 몬스터와 전투를 실행할 경우, 배틀 페이즈 동안에만 그 상대 몬스터의 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：把自己的手卡·场上1只「电子化天使」仪式怪兽解放，以自己场上1只天使族·光属性怪兽为对象才能发动。作为对象的怪兽的攻击力·守备力直到回合结束时上升解放的怪兽的等级×200。这个回合，作为对象的怪兽和从额外卡组特殊召唤的对方怪兽进行战斗的场合，只在战斗阶段内那只对方怪兽的效果无效化。
+    此卡名的卡1回合仅可发动1张。①：解放自己手牌・场上1只"电子天使"仪式怪兽，以自己场上的1只天使族・光属性怪兽为对象可以发动。对象怪兽的攻击力・守备力直至回合结束时为止，上升相当于解放的怪兽的等级×200的数值。此回合，对象怪兽与被从额外牌组特殊召唤的对手怪兽进行战斗的情况下，仅在战斗阶段期间该对手怪兽的效果无效化。
 card_type: Spell
 property: Quick-Play
 series:
@@ -91,6 +90,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR016
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC020
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
