--- a/data/cards/39275698.yaml
+++ b/data/cards/39275698.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피의 깃털휴식
   ko_rr: Haepi-ui Git-teolhyusin
   zh-TW:
-  zh-CN: 鹰身女妖的羽翼休息
+  zh-CN: 神鹰羽毛休憩
 text:
   en: |-
     Target 3 "Harpie Lady" and/or "Harpie Lady Sisters" in your GY; shuffle them into the Deck, then draw 1 card. If you controlled a Level 5 or higher "Harpie" monster when you activated this effect, draw 2 cards instead. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except WIND monsters. You can only activate 1 "Harpie's Feather Rest" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 묘지의 "해피 레이디" "해피 레이디 세자매" 중에서 합계 3장을 대상으로 하고 발동할 수 있다. 그 카드를 덱에 넣고 셔플한다. 그 후, 자신은 덱에서 1장 드로우한다. 자신 필드에 레벨 5 이상의 "해피" 몬스터가 존재하는 상태에서 발동했을 경우에는 드로우할 매수는 2장이 된다. 이 카드의 발동 후, 턴 종료시까지 자신은 바람 속성 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从自己墓地的「鹰身女郎」「鹰身女郎三姐妹」之中以合计3只为对象才能发动。那些卡加入卡组洗切。那之后，自己从卡组抽1张。自己场上有5星以上的「鹰身」怪兽存在的状态发动的场合抽出的数量变成2张。这张卡的发动后，直到回合结束时自己不是风属性怪兽不能特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：从自己墓地的"神鹰女郎"、"神鹰女郎三姐妹"中，以合计3只为对象可以发动。将该卡加入牌组洗牌。然后自己从牌组抽1张。在自己场上有等级5以上"神鹰"怪兽存在的状态下发动的情况下，抽牌张数变为2张。此卡发动后，直至回合结束时为止自己仅可特殊召唤风属性怪兽。
 card_type: Spell
 property: Normal
 series:
@@ -111,6 +110,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR004
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC004
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
