--- a/data/cards/39392286.yaml
+++ b/data/cards/39392286.yaml
@@ -101,6 +101,7 @@ sets:
   - set_number: DP21-SC001
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
