--- a/data/cards/39996157.yaml
+++ b/data/cards/39996157.yaml
@@ -166,6 +166,10 @@ sets:
     set_name: Entry Pack Volume 5
     rarities:
     - Common
+  - set_number: DP21-SC027
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
