--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -173,6 +173,7 @@ sets:
   - set_number: DP21-SC049
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
