--- a/data/cards/51369889.yaml
+++ b/data/cards/51369889.yaml
@@ -32,8 +32,7 @@ text:
     ①: 1턴에 1번, 자신 필드의 기계족 엑시즈 몬스터의 엑시즈 소재를 임의의 수만큼 제거하고, 그 수만큼 필드의 카드를 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신 필드의 기계족 엑시즈 몬스터가 전투 또는 상대 효과로 파괴되었을 경우, 자신 묘지에서 이 카드와 기계족 엑시즈 몬스터 1장을 제외하고 발동할 수 있다. 제외한 몬스터의 랭크 × 200 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，把自己场上的机械族超量怪兽的超量素材任意数量取除，以那个数量的场上的卡为对象才能发动。那些卡破坏。
-    ②：这张卡在墓地存在的状态，自己场上的机械族超量怪兽被战斗或者对方的效果破坏的场合，从自己墓地把这张卡和1只机械族超量怪兽除外才能发动。给与对方除外的怪兽的阶级×200伤害。
+    ①：1回合1次，将任意数量的自己场上机械族超量怪兽的超量素材去除，依去除数量，以场上的卡为对象可以发动。将该卡破坏。②：此卡存在于墓地的状态下，自己场上的机械族超量怪兽因战斗或对手的效果被破坏的情况下，从自己的墓地将此卡和1只机械族超量怪兽除外可以发动。给予对手相当于除外怪兽的阶级×200的数值的伤害。
 card_type: Trap
 property: Continuous
 series:
@@ -97,6 +96,11 @@ sets:
     - Secret Rare
   ko:
   - set_number: DP21-KR038
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC048
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
