--- a/data/cards/53325667.yaml
+++ b/data/cards/53325667.yaml
@@ -119,6 +119,7 @@ sets:
   - set_number: DP21-SC030
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
