--- a/data/cards/53503015.yaml
+++ b/data/cards/53503015.yaml
@@ -121,6 +121,7 @@ sets:
   - set_number: DP21-SC033
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
