--- a/data/cards/66386380.yaml
+++ b/data/cards/66386380.yaml
@@ -113,6 +113,7 @@ sets:
   - set_number: DP21-SC002
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
