--- a/data/cards/73580471.yaml
+++ b/data/cards/73580471.yaml
@@ -353,6 +353,8 @@ sets:
   - set_number: DP21-SC040
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
+    - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
