--- a/data/cards/77235086.yaml
+++ b/data/cards/77235086.yaml
@@ -224,6 +224,10 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: DP21-SC023
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Limited
   ocg: Unlimited
