--- a/data/cards/78316184.yaml
+++ b/data/cards/78316184.yaml
@@ -32,7 +32,7 @@ text:
     "기계천사의 의식"에 의해 의식 소환. ①: 이 카드가 의식 소환에 성공했을 경우에 발동할 수 있다. 엑스트라 덱에서 특수 소환된 상대 필드의 몬스터를 전부 파괴하고, 파괴한 몬스터의 수 × 1000 데미지를 상대에게 준다. 이 턴에, 이 카드는 1번의 배틀 페이즈 중에 2회 공격할 수 있다. ②: 1턴에 1번, 필드의 카드를 파괴하는 마법 / 함정 / 몬스터의 효과가 발동했을 때, 자신 묘지의 의식 몬스터 1장을 덱으로 되돌리고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
-    以"机械天使的仪式"降临。①：此卡仪式召唤成功的情况下可以发动。将对手场上从额外牌组被特殊召唤的怪兽全部破坏，给予对手相当于破坏的怪兽数量×1000数值的伤害。此回合，此卡在1次战斗阶段可攻击2次。②：1回合1次，破坏场上的卡的魔法・陷阱・怪兽的效果发动时，将自己墓地的1只仪式怪兽放回牌组可以发动。将该发动无效并破坏。
+    以"机械天使的仪式"降临。①：此卡仪式召唤成功的情况下可以发动。将对手场上被从额外牌组特殊召唤的怪兽全部破坏，给予对手相当于破坏的怪兽数量×1000数值的伤害。此回合，此卡在1次战斗阶段可攻击2次。②：1回合1次，破坏场上的卡之魔法・陷阱・怪兽的效果发动时，将自己墓地的1只仪式怪兽放回牌组可以发动。将该发动无效并破坏。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
@@ -103,6 +103,10 @@ sets:
   zh-CN:
   - set_number: SCTP-SC073
     set_name: Entry Pack Volume 5
+    rarities:
+    - Common
+  - set_number: DP21-SC026
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
