--- a/data/cards/87639778.yaml
+++ b/data/cards/87639778.yaml
@@ -122,6 +122,7 @@ sets:
   - set_number: DP21-SC000
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
