--- a/data/cards/88753594.yaml
+++ b/data/cards/88753594.yaml
@@ -111,6 +111,7 @@ sets:
   - set_number: DP21-SC058
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
