--- a/data/cards/88875132.yaml
+++ b/data/cards/88875132.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, "폭주궤도 플라잉 페가수스" 이외의 자신 묘지의 기계족 / 땅 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 효과를 무효로 하고 수비 표시로 특수 소환한다. ②: 이 카드 이외의 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 이 카드의 레벨은, 그 중의 1장의 레벨과 같아진다. 이 효과를 발동하는 턴에, 자신은 엑시즈 몬스터로밖에 공격 선언할 수 없다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：此卡召唤・特殊召唤成功的情况下，可以“爆走轨道飞翔天马”以外的自己墓地的1只机械族・地属性怪兽为对象发动。将该怪兽的效果无效，以守备表示特殊召唤。②：可以此卡以外的自己场上的1只表侧表示怪兽为对象发动。该怪兽和此卡的等级变为和其中1只的等级相同。发动此效果的回合中，自己仅可用超量怪兽进行攻击宣言。
+    此卡名的①②效果1回合仅可各使用1次。①：此卡召唤・特殊召唤成功的情况下，以自己墓地的"爆走轨道飞翔天马"以外的1只机械族・地属性怪兽为对象可以发动。将该怪兽的效果无效并以守备表示特殊召唤。②：以自己场上此卡以外的1只表侧表示怪兽为对象可以发动。该怪兽和此卡的等级变为和其中1只的等级相同。发动此效果的回合中，自己仅可用超量怪兽攻击宣言。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -124,6 +124,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Extra Secret Rare
+  - set_number: DP21-SC046
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
