--- a/data/cards/90238142.yaml
+++ b/data/cards/90238142.yaml
@@ -160,6 +160,7 @@ sets:
   - set_number: DP21-SC008
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
