--- a/data/cards/91668401.yaml
+++ b/data/cards/91668401.yaml
@@ -123,6 +123,7 @@ sets:
   - set_number: DP21-SC016
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Ultra Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
