--- a/data/cards/92881099.yaml
+++ b/data/cards/92881099.yaml
@@ -12,7 +12,7 @@ name:
   ko: 매혹의 스플릿 미러
   ko_rr: Maehon-ui Seupeullit Mireo
   zh-TW:
-  zh-CN: 魅惑的两镜相照
+  zh-CN: 魅惑的千层镜
 text:
   en: |-
     When a "Harpie Lady" or "Harpie Lady Sisters" you control is destroyed by battle: You can Special Summon 1 "Harpie" monster from your Deck with a different original name than the destroyed monster. If this card you control is destroyed by a "Harpie" card's effect or your opponent's card effect: Target 1 "Harpie" monster in your GY; Special Summon it. You can only use each effect of "Alluring Mirror Split" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 "해피 레이디" 또는 "해피 레이디 세자매"가 전투로 파괴되었을 때에 발동할 수 있다. 그 몬스터와 원래의 카드명이 다른 "해피" 몬스터 1장을 덱에서 특수 소환한다. ②: 필드의 이 카드가 상대 효과 또는 자신의 "해피" 카드의 효과로 파괴되었을 경우, 자신 묘지의 "해피" 몬스터 1장을 대상으로 하고 발동한다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己的「鹰身女郎」或者「鹰身女郎三姐妹」被战斗破坏时才能发动。原本卡名和那只怪兽不同的1只「鹰身」怪兽从卡组特殊召唤。
-    ②：场上的这张卡被对方的效果或者自己的「鹰身」卡的效果破坏的场合，以自己墓地1只「鹰身」怪兽为对象发动。那只怪兽特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：自己的"神鹰女郎"或"神鹰女郎三姐妹"因战斗被破坏时可以发动。将1只原本卡名与该怪兽不同的"神鹰"怪兽从牌组特殊召唤。②：场上的此卡因对手的效果或自己"神鹰"卡的效果被破坏的情况下，以自己墓地的1只"神鹰"怪兽为对象发动。将该怪兽特殊召唤。
 card_type: Spell
 property: Continuous
 sets:
@@ -110,6 +108,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR003
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC003
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
