--- a/data/cards/98884569.yaml
+++ b/data/cards/98884569.yaml
@@ -12,7 +12,7 @@ name:
   ko: 블루 로즈 드래곤
   ko_rr: Beullu Rojeu Deuraegon
   zh-TW:
-  zh-CN: 青蔷薇龙
+  zh-CN: 蓝蔷薇龙
 text:
   en: |-
     When this card on the field is destroyed and sent to the GY: You can target 1 "Black Rose Dragon" or 1 Plant monster in your GY; Special Summon that monster.
@@ -32,7 +32,7 @@ text:
     ①: 필드의 이 카드가 파괴되어 묘지로 보내졌을 때, 자신 묘지의, "블랙 로즈 드래곤" 또는 식물족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：场上的这张卡被破坏送去墓地时，以自己墓地1只「黑蔷薇龙」或者植物族怪兽为对象才能发动。那只怪兽特殊召唤。
+    ①：场上的此卡被破坏并被送至墓地时，以自己墓地的1只"黑蔷薇龙"或植物族怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -139,6 +139,11 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: DP21-KR031
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC037
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
