--- a/data/cards/99092624.yaml
+++ b/data/cards/99092624.yaml
@@ -12,7 +12,7 @@ name:
   ko: 블루밍 로즈
   ko_rr: Beulluming Rojeu
   zh-TW:
-  zh-CN: 漆黑之蔷薇的开华
+  zh-CN: 漆黑蔷薇之开华
 text:
   en: |-
     Special Summon "Rose Tokens" (Plant/DARK/Level 2/ATK 800/DEF 800) in Defense Position to either field, up to the combined number of cards in the Field Zones and Field Spells in the GYs. If this card is in your GY: You can target 1 "Black Rose Dragon", or 1 Plant monster, in your Monster Zone; banish it, and if you do, place this card on the bottom of the Deck. During the next Standby Phase, return that banished monster to the field. You can only use this effect of "Blooming of the Darkest Rose" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 서로의 필드 존의 카드 및 묘지의 필드 마법 카드의 수까지, 자신 / 상대 필드에 "로즈 토큰"(식물족 / 어둠 / 레벨 2 / 공 800 / 수 800)을 수비 표시로 특수 소환한다. ②: 이 카드가 묘지에 존재할 경우, 자신 필드의, "블랙 로즈 드래곤" 또는 식물족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외하고, 이 카드를 덱의 맨 아래로 되돌린다. 이 효과로 제외한 몬스터는 다음 스탠바이 페이즈에 필드로 되돌아간다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：把最多有双方的场地区域的卡以及墓地的场地魔法卡数量的「蔷薇衍生物」（植物族·暗·2星·攻/守800）在自己·对方场上守备表示特殊召唤。
-    ②：这张卡在墓地存在的场合，以自己场上1只「黑蔷薇龙」或者植物族怪兽为对象才能发动。那只怪兽除外，这张卡回到卡组最下面。这个效果除外的怪兽在下次的准备阶段回到场上。
+    此卡名的②效果1回合仅可使用1次。①：将"蔷薇衍生物"（植物族・暗・星2・攻／守800）以守备表示特殊召唤至自己・对手场上，数量最多为双方场地区域的卡及墓地的场地魔法卡数量。②：此卡存在于墓地的情况下，以自己场上的1只"黑蔷薇龙"或植物族怪兽为对象可以发动。将该怪兽除外，将此卡放回牌组最下面。以此效果除外的怪兽将在下一个准备阶段放回场上。
 card_type: Trap
 property: Normal
 series:
@@ -92,6 +90,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR027
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC034
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
