--- a/data/cards/99427357.yaml
+++ b/data/cards/99427357.yaml
@@ -84,6 +84,7 @@ sets:
   - set_number: DP21-SC022
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
+    - Super Rare
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
