--- a/data/cards/13935001.yaml
+++ b/data/cards/13935001.yaml
@@ -12,7 +12,7 @@ name:
   ko: 문라이트 세레나데 댄스
   ko_rr: Munraiteu Serenade Daenseu
   zh-TW:
-  zh-CN: 月光小夜曲舞踊
+  zh-CN: 月光小夜曲舞蹈
 text:
   en: |-
     When a Fusion Monster(s) is Fusion Summoned to your field (except during the Damage Step): You can target 1 of those monsters; apply these effects in sequence.
@@ -50,11 +50,10 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 융합 몬스터가 융합 소환되었을 때, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 이하의 효과를 적용한다. ●상대 필드에 "문라이트 토큰"(야수전사족 / 어둠 / 레벨 4 / 공 2000 / 수 2000) 1장을 특수 소환한다. ●대상 몬스터의 공격력은 상대 필드의 몬스터의 수 × 500 올린다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고 발동할 수 있다. 패를 1장 골라 묘지로 보내고, 덱에서 "문라이트" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：自己场上有融合怪兽融合召唤时，以那1只怪兽为对象才能发动。以下效果适用。
-    ●在对方场上把1只「月光衍生物」（兽战士族·暗·4星·攻/守2000）特殊召唤。
-    ●作为对象的怪兽的攻击力上升对方场上的怪兽数量×500。
-    ②：自己主要阶段把墓地的这张卡除外才能发动。选1张手卡送去墓地，从卡组把1只「月光」怪兽特殊召唤。
+    此卡名的②效果1回合仅可使用1次。①：融合怪兽被融合召唤至自己场上时，以该1只怪兽为对象可以发动。适用以下效果。
+    ●将1只"月光衍生物"（兽战士族・暗・星4・攻／守2000）特殊召唤至对手场上。
+    ●对象怪兽的攻击力上升相当于对手场上怪兽数量×500的数值。
+    ②：在自己的主要阶段将墓地的此卡除外可以发动。挑选1张手牌送至墓地，从牌组将1只"月光"怪兽特殊召唤。
 card_type: Trap
 property: Continuous
 series:
@@ -112,6 +111,11 @@ sets:
     - Rare
   ko:
   - set_number: DP21-KR049
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
+  zh-CN:
+  - set_number: DP21-SC062
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
