--- a/data/cards/90219263.yaml
+++ b/data/cards/90219263.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Mangekyō - Kareinaru Bunshin -
   ko: 만화경 －화려한 분신－
   ko_rr: Manhwagyeong - Hwaryeohan Bunsin
-  zh-TW:
+  zh-TW: 萬花筒－華麗分身－
   zh-CN: 万华镜－华丽的分身－
 text:
   en: |-
