--- a/data/cards/11439455.yaml
+++ b/data/cards/11439455.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, "문라이트 블루 캣" 이외의 자신 필드의 "문라이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 원래 공격력의 배가 된다. ②: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "문라이트" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「月光苍猫」的①的效果1回合只能使用1次。①：这张卡特殊召唤成功的场合，以「月光苍猫」以外的自己场上1只「月光」怪兽为对象才能发动。那只怪兽的攻击力直到回合结束时变成原本攻击力的2倍。②：场上的这张卡被战斗·效果破坏的场合才能发动。从卡组把1只「月光」怪兽特殊召唤。
+    此卡名的①效果1回合仅可使用1次。①：此卡特殊召唤成功的情况下，以自己场上"月光苍猫"以外的1只"月光"怪兽为对象可以发动。该怪兽的攻击力直至回合结束时为止变为原本攻击力的两倍。②：场上的此卡因战斗・效果被破坏的情况下可以发动。从牌组将1只"月光"怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -110,6 +110,11 @@ sets:
     rarities:
     - Normal Parallel Rare
   - set_number: DP21-KR050
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC063
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
