--- a/data/cards/24550676.yaml
+++ b/data/cards/24550676.yaml
@@ -12,7 +12,7 @@ name:
   ko: 문라이트 라이오 댄서
   ko_rr: Munraiteu Raio Daenseo
   zh-TW:
-  zh-CN: 月光舞狮子姫
+  zh-CN: 月光舞狮子姬
 text:
   en: |-
     "Lunalight Panther Dancer" + 2 "Lunalight" monsters
@@ -40,8 +40,8 @@ text:
     이 카드는 상기의 카드를 융합 소재로 한 융합 소환으로만 특수 소환할 수 있다. ①: 이 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ②: 이 카드는 1번의 배틀 페이즈 중에 2회 공격할 수 있다. ③: 1턴에 1번, 이 카드가 몬스터를 공격한 데미지 스텝 종료시에 발동할 수 있다. 상대 필드의 특수 소환된 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    「月光舞豹姫」＋「月光」怪兽×2
-    这张卡用以上记的卡为融合素材的融合召唤才能特殊召唤。①：这张卡不会成为对方的效果的对象，不会被对方的效果破坏。②：这张卡在同1次的战斗阶段中可以作2次攻击。③：1回合1次，这张卡向怪兽攻击的伤害步骤结束时才能发动。对方场上的特殊召唤的怪兽全部破坏。
+    "月光舞豹姬"＋"月光"怪兽×2
+    此卡仅可通过以上述卡作为融合素材的融合召唤来特殊召唤。①：此卡不会成为对手效果的对象，也不会因对手的效果而被破坏。②：此卡在1次战斗阶段中可攻击2次。③：1回合1次，此卡攻击怪兽的伤害步骤结束时可以发动。将对手场上被特殊召唤的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Beast-Warrior / Fusion / Effect
 attribute: DARK
@@ -116,6 +116,11 @@ sets:
     - Secret Rare
     - Ultimate Rare
   - set_number: DP21-KR054
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC070
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
