--- a/data/cards/51777272.yaml
+++ b/data/cards/51777272.yaml
@@ -40,8 +40,8 @@ text:
     ①: 이 카드는 전투로는 파괴되지 않는다. ②: 1턴에 1번, 자신 메인 페이즈 1 에 이 카드 이외의 자신 필드의 "문라이트" 몬스터 1장을 릴리스하고 발동할 수 있다. 이 턴에, 상대 몬스터는 각각 1번만 전투로는 파괴되지 않으며, 이 카드는 모든 상대 몬스터에 2회씩 공격할 수 있다. ③: 이 카드의 공격 선언시에 발동한다. 상대에게 100 데미지를 준다.
   zh-TW:
   zh-CN: |-
-    「月光」怪兽×2
-    ①：这张卡不会被战斗破坏。②：1回合1次，自己主要阶段1把这张卡以外的自己场上1只「月光」怪兽解放才能发动。这个回合，对方怪兽各有1次不会被战斗破坏，这张卡可以向全部对方怪兽各作2次攻击。③：这张卡的攻击宣言时发动。给与对方100伤害。
+    "月光"怪兽×2
+    ①：此卡不会因战斗被破坏。②：1回合1次，在自己的主要阶段1，解放自己场上此卡以外的1只"月光"怪兽可以发动。此回合，对手怪兽各仅1次不会因战斗被破坏，此卡可攻击所有对手怪兽各2次。③：此卡的攻击宣言时发动。给予对手100伤害。
 card_type: Monster
 monster_type_line: Beast-Warrior / Fusion / Effect
 attribute: DARK
@@ -112,6 +112,11 @@ sets:
     rarities:
     - Rare
   - set_number: DP21-KR052
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC068
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
