--- a/data/cards/87931906.yaml
+++ b/data/cards/87931906.yaml
@@ -12,7 +12,7 @@ name:
   ko: 문라이트 퓨전
   ko_rr: Munraiteu Pyujeon
   zh-TW:
-  zh-CN: 月光融合
+  zh-CN: 月光结合
 text:
   en: |-
     Fusion Summon 1 "Lunalight" Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. If your opponent controls a monster that was Special Summoned from the Extra Deck, you can also use 1 "Lunalight" monster in your Deck or Extra Deck as Fusion Material. You can only activate 1 "Lunalight Fusion" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드에서, "문라이트" 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 상대 필드에, 엑스트라 덱에서 특수 소환된 몬스터가 존재할 경우에는 자신의 덱 / 엑스트라 덱의 "문라이트" 몬스터도 1장까지 융합 소재로 할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从自己的手卡·场上把「月光」融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。对方场上有从额外卡组特殊召唤的怪兽存在的场合自己的卡组·额外卡组的「月光」怪兽也能有最多1只作为融合素材。
+    此卡名的卡1回合仅可发动1张。①：从自己的手牌・场上，将由"月光"融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。对手场上有被从额外牌组特殊召唤的怪兽存在的情况下，也可将自己牌组・额外牌组的最多1只"月光"怪兽作为融合素材。
 card_type: Spell
 property: Normal
 series:
@@ -95,6 +94,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DP21-SC061
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
