--- a/data/cards/94919024.yaml
+++ b/data/cards/94919024.yaml
@@ -32,7 +32,7 @@ text:
     ① : 이 카드가 효과로 묘지로 보내졌을 경우, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력을 턴 종료시까지 0 으로 한다. ② : 자신 필드의 "문라이트" 몬스터를 대상으로 하는 마법 / 함정 / 몬스터의 효과가 발동했을 때, 묘지의 이 카드를 제외하고 발동할 수 있다. 그 발동을 무효로 하고, 양쪽의 플레이어는 1000 LP 회복한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡被效果送去墓地的场合，以对方场上1只表侧表示怪兽为对象才能发动。那只怪兽的攻击力直到回合结束时变成0。②：自己场上的「月光」怪兽为对象的魔法·陷阱·怪兽的效果发动时，把墓地的这张卡除外才能发动。那个发动无效，双方玩家回复1000基本分。
+    ①：此卡因效果被送至墓地的情况下，以对手场上的1只表侧表示怪兽为对象可以发动。将该怪兽的攻击力直至回合结束时为止改成0。②：以自己场上的"月光"怪兽为对象的的魔法・陷阱・怪兽的效果发动时，将墓地的此卡除外可以发动。将该发动无效，双方玩家恢复1000LP。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -121,6 +121,12 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DP21-SC065
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
