--- a/data/cards/97165977.yaml
+++ b/data/cards/97165977.yaml
@@ -12,7 +12,7 @@ name:
   ko: 문라이트 팬서 댄서
   ko_rr: Munraiteu Paenseo Daenseo
   zh-TW:
-  zh-CN: 月光舞豹姫
+  zh-CN: 月光舞豹姬
 text:
   en: |-
     "Lunalight Cat Dancer" + 1 "Lunalight" monster
@@ -40,8 +40,8 @@ text:
     이 카드는 상기의 카드를 융합 소재로 한 융합 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 이 카드는 상대 효과로는 파괴되지 않는다. ②: 1턴에 1번, 자신 메인 페이즈 1 에 발동할 수 있다. 이 턴에, 상대 몬스터는 각각 1번만 전투로는 파괴되지 않으며, 이 카드는 모든 상대 몬스터에 2회씩 공격할 수 있다. ③: 이 카드가 전투로 상대 몬스터를 파괴했을 때에 발동한다. 이 카드의 공격력은 배틀 페이즈 종료시까지 200 올린다.
   zh-TW:
   zh-CN: |-
-    「月光舞猫姫」＋「月光」怪兽
-    这张卡用以上记的卡为融合素材的融合召唤才能从额外卡组特殊召唤。①：这张卡不会被对方的效果破坏。②：1回合1次，自己主要阶段1才能发动。这个回合，对方怪兽各有1次不会被战斗破坏，这张卡可以向全部对方怪兽各作2次攻击。③：这张卡战斗破坏对方怪兽时发动。这张卡的攻击力直到战斗阶段结束时上升200。
+    "月光舞猫姬"＋"月光"怪兽
+    此卡仅可通过以上述卡作为融合素材的融合召唤来从额外牌组特殊召唤。①：此卡不会因对手的效果被破坏。②：1回合1次，在自己的主要阶段1可以发动。此回合，对手怪兽各仅1次不会因战斗被破坏，此卡可攻击所有对手怪兽各2次。③：此卡战斗破坏对手怪兽时发动。此卡的攻击力直至战斗阶段结束时为止上升200。
 card_type: Monster
 monster_type_line: Beast-Warrior / Fusion / Effect
 attribute: DARK
@@ -114,6 +114,11 @@ sets:
     - Super Rare
     - Secret Rare
   - set_number: DP21-KR053
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC069
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
