--- a/data/cards/97584719.yaml
+++ b/data/cards/97584719.yaml
@@ -52,11 +52,8 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 임의의 수만큼 제거하고, 그 수만큼 필드의 카드를 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. ②: 이 카드가 전투로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 그 몬스터를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다. ③: 이 카드가 묘지에 존재할 경우, 자신 필드의 기계족 링크 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    9星怪兽×2
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：把这张卡的超量素材任意数量取除，以那个数量的场上的卡为对象才能发动。那些卡破坏。
-    ②：这张卡战斗破坏对方怪兽时才能发动。那只怪兽在这张卡下面重叠作为超量素材。
-    ③：这张卡在墓地存在的场合，把自己场上1只机械族连接怪兽解放才能发动。这张卡守备表示特殊召唤。
+    等级9怪兽×2
+    此卡名的①③效果1回合仅可各使用1次。①：去除此卡任意数量的超量素材，以场上该数量的卡为对象可以发动。将该卡破坏。②：此卡战斗破坏对手怪兽时可以发动。将该怪兽重叠在此卡下方作为超量素材。③：此卡存在于墓地的情况下，解放自己场上的1只机械族连接怪兽可以发动。将此卡以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: EARTH
@@ -123,6 +120,11 @@ sets:
     set_name: 'Deck Build Pack: Infinity Chasers'
     rarities:
     - Ultra Rare
+    - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC033
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
