--- a/data/cards/23689428.yaml
+++ b/data/cards/23689428.yaml
@@ -12,7 +12,7 @@ name:
   ko: 무한기동 골라이아스
   ko_rr: Muhan-gidong Gollaiaseu
   zh-TW:
-  zh-CN: 无限起动 哥利亚巨人
+  zh-CN: 无限起动 哥利亚
 text:
   en: |-
     1 non-Link "Infinitrack" monster
@@ -46,11 +46,8 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 필드에서 묘지로 보내졌을 경우, 자신 필드의 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 그 몬스터의 아래에 겹쳐 엑시즈 소재로 한다. ②: 이 카드를 소재로서 가지고 있는, 원래의 종족이 기계족인 엑시즈 몬스터는 이하의 효과를 얻는다. ●이 카드는 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    连接怪兽以外的「无限起动」怪兽1只
-    这个卡名的①的效果1回合只能使用1次。
-    ①：这张卡从场上送去墓地的场合，以自己场上1只超量怪兽为对象才能发动。把这张卡在那只怪兽下面重叠作为超量素材。
-    ②：持有这张卡作为素材中的原本种族是机械族的超量怪兽得到以下效果。
-    ●这张卡不会被效果破坏。
+    连接怪兽以外的"无限起动"怪兽1只
+    此卡名的①效果1回合仅可使用1次。①：此卡从场上被送至墓地的情况下，以自己场上的1只超量怪兽为对象可以发动。将此卡重叠在该怪兽下方作为超量素材。②：持有此卡作为素材的、原本种族为机械族的超量怪兽获得以下效果。●此卡不会因效果被破坏。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: EARTH
@@ -122,6 +119,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: TM01-SC034
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
