--- a/data/cards/64475743.yaml
+++ b/data/cards/64475743.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18227
+password: 64475743
 name:
   en: Kittytail, Mystical Beast of the Forest
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分の墓地の獣族・獣戦士族・鳥獣族・昆虫族・植物族モンスター１体を対象として発動できる。そのモンスターと元々の種族が同じとなるモンスター１体をデッキから墓地へ送る。②：このカードが相手によって破壊された場合に発動できる。デッキから「森の聖獣 キティテール」以外の獣族・獣戦士族・鳥獣族・昆虫族・植物族モンスター１体を手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -41,6 +42,6 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 895427
 fake_password: 100200222
