--- a/data/cards/kdb8878.yaml
+++ b/data/cards/kdb8878.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 8878
 password:
 name:
   en: Daidara-Bocchi
@@ -33,11 +33,11 @@ atk: 2900
 def: 2500
 sets:
   ja:
-  - set_number: VJMP-JP2??
+  - set_number: VJMP-JP224
     set_name: V Jump Fall 2022 subscription bonus
     rarities:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 872004
