--- a/data/cards/kdb9416.yaml
+++ b/data/cards/kdb9416.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 9416
 password:
 name:
   en: Queen Butterfly Danaus
@@ -33,11 +33,11 @@ atk: 2800
 def: 1900
 sets:
   ja:
-  - set_number: VJMP-JP2??
+  - set_number: VJMP-JP225
     set_name: V Jump Fall 2022 subscription bonus
     rarities:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 872005
