--- a/data/cards/kdb7364.yaml
+++ b/data/cards/kdb7364.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 7364
 password:
 name:
   en: Wish Dragon
@@ -33,11 +33,11 @@ atk: 700
 def: 100
 sets:
   ja:
-  - set_number: VJMP-JP2??
+  - set_number: VJMP-JP223
     set_name: V Jump Fall 2022 subscription bonus
     rarities:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 872006
