--- a/data/cards/kdb7364.yaml
+++ b/data/cards/kdb7364.yaml
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードをリリースして発動できる。自分フィールドに「ドラゴン・トークン」（ドラゴン族・地・星１・攻／守０）２体を特殊召喚する。この効果の発動後、ターン終了時まで自分はレベル５以上のドラゴン族モンスターしかＥＸデッキから特殊召喚できない。
   ko:
   zh-TW:
   zh-CN:
