--- a/data/cards/kdb8878.yaml
+++ b/data/cards/kdb8878.yaml
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは特殊召喚できない。このカードはアンデット族モンスター１体をリリースして表側表示でアドバンス召喚できる。①：このカードの攻撃力は、自分フィールドの他のアンデット族モンスターの数×２００アップする。②：このカードが墓地に存在し、自分の墓地に「ダイダラボッチ」以外のアンデット族モンスターが２体以上存在する場合、自分メインフェイズ１開始時に、手札を１枚捨てて発動できる。このカードを手札に加える。
   ko:
   zh-TW:
   zh-CN:
