--- a/data/cards/10938846.yaml
+++ b/data/cards/10938846.yaml
@@ -9,8 +9,8 @@ name:
   pt: Ponte Arco-Íris do Coração
   ja: <ruby>心<rt>こころ</rt></ruby>の<ruby>架<rt>か</rt></ruby>け<ruby>橋<rt>はし</rt></ruby>
   ja_romaji: Kokoro no Kakehashi
-  ko:
-  ko_rr:
+  ko: 마음의 가교
+  ko_rr: Ma-eum-ui Gagyo
   zh-TW:
   zh-CN: 心之桥梁
 text:
@@ -28,7 +28,8 @@ text:
     Durante sua Fase Principal, você pode Invocar por Invocação-Normal 1 monstro "Fera Cristalina", em adição à sua Invocação-Normal/Baixar (padrão). (Você só pode se aproveitar deste efeito uma vez por turno.) Você só pode usar cada um dos seguintes efeitos de "Ponte Arco-Íris do Coração" uma vez por turno. Durante sua Fase Principal: você pode destruir 1 card "Fera Cristalina" que você controla ou na sua mão e, se isso acontecer, adicione 1 Magia/Armadilha "Cristalino(a)" do seu Deck à sua mão. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas, mesmo durante a Etapa de Dano: você pode escolher 1 card que seu oponente controla; devolva tanto esse card quanto este card para a mão.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分は通常召喚に加えて１度だけ、自分メインフェイズに「宝玉獣」モンスター１体を召喚できる。②：自分メインフェイズに発動できる。自分の手札・フィールドの「宝玉獣」カード１枚を選んで破壊し、デッキから「宝玉」魔法・罠カード１枚を手札に加える。③：自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、相手フィールドのカード１枚を対象として発動できる（ダメージステップでも発動可能）。そのカードとこのカードを持ち主の手札に戻す。
-  ko:
+  ko: |-
+    이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 "보옥수" 몬스터 1장을 일반 소환할 수 있다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드의 "보옥수" 카드 1장을 골라 파괴하고, 덱에서 "보옥" 마법 / 함정 카드 1장을 패에 넣는다. ③: 자신의 마법 & 함정 존에 "보옥수" 카드가 놓여졌을 경우, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다(데미지 스텝에도 발동 가능). 그 카드와 이 카드를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     这个卡名的②③效果1回合各能使用1次。①：自己在通常召唤外可以追加仅1次，在自己的主要阶段召唤1只「宝玉獣／宝玉兽」怪兽。②：自己的主要阶段可以发动。选自己的手牌或场上的1张「宝玉獣／宝玉兽」卡破坏，从卡组将1张「宝玉」魔法陷阱卡加入手牌。③：自己的魔法陷进区有「宝玉獣／宝玉兽」卡被放置的场合，可以以对手场上的1张卡为对象发动（伤害步骤也可发动）。使那张卡和这张卡返回持有者的手牌。
