--- a/data/cards/32710364.yaml
+++ b/data/cards/32710364.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> ルビー・カーバンクル
   ja_romaji: Hōgyokujū Rubī Kābankuru
   ko: 보옥수 루비 카번클
-  ko_rr:
+  ko_rr: Booksu Rubi Kabeonkeul
   zh-TW:
   zh-CN: 宝玉兽 红玉兽
 text:
