--- a/data/cards/36795102.yaml
+++ b/data/cards/36795102.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> レインボー・ドラゴン
   ja_romaji: Kyūkyoku Hōgyokujū Reinbō Doragon
   ko: 궁극보옥수 레인보우 드래곤
-  ko_rr: Gunggeukbo-oksu Reinbou Deuraegon
+  ko_rr: Gunggeukbooksu Reinbou Deuraegon
   zh-TW:
   zh-CN: 究极宝玉兽 虹龙
 text:
