--- a/data/cards/58371671.yaml
+++ b/data/cards/58371671.yaml
@@ -9,8 +9,8 @@ name:
   pt: Égide Cristalino
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>
   ja_romaji: Hōgyoku no Kago
-  ko:
-  ko_rr:
+  ko: 보옥의 가호
+  ko_rr: Book-ui Gaho
   zh-TW:
   zh-CN: 宝玉的加护
 text:
@@ -28,7 +28,8 @@ text:
     Escolha 1 Card de Monstro "Fera Cristalina" que você controla; destrua-o e, depois, Invoque por Invocação-Especial 1 "Ficha de Fera Cristalina" com o Tipo, Atributo, Nível e ATK/DEF originais do monstro destruído. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas enquanto este card estiver no seu Cemitério, mesmo durante a Etapa de Dano: você pode banir este card; Invoque por Invocação-Especial 1 Card de Monstro "Fera Cristalina" da sua Zona de Magias & Armadilhas. Você só pode usar este efeito de "Égide Cristalino" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドの「宝玉獣」モンスターカード１枚を対象として発動できる。そのカードを破壊する。その後、そのカードの元々の種族・属性・レベル・攻撃力・守備力を持つ「宝玉獣トークン」１体を自分フィールドに特殊召喚する。②：このカードが墓地に存在し、自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、このカードを除外して発動できる（ダメージステップでも発動可能）。自分の魔法＆罠ゾーンの「宝玉獣」モンスターカード１枚を選んで特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 "보옥수" 몬스터 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. 그 후, 그 카드의 원래의 종족 / 속성 / 레벨 / 공격력 / 수비력을 가지는 "보옥수 토큰" 1장을 자신 필드에 특수 소환한다. ②: 이 카드가 묘지에 존재하고, 자신의 마법 & 함정 존에 "보옥수" 카드가 놓여졌을 경우, 이 카드를 제외하고 발동할 수 있다(데미지 스텝에도 발동 가능). 자신의 마법 & 함정 존의 "보옥수" 몬스터 카드 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的②效果1回合只能使用1次。①：可以以自己场上的1张「宝玉獣／宝玉兽」怪兽卡为对象发动。将那张卡破坏。那之后，将1只拥有那张卡的原本的种族·属性·等级·攻击力·守备力的「宝玉獣トークン／宝玉兽衍生物」特殊召唤到自己的场上。②：这张卡在墓地存在，自己的魔法陷阱区有「宝玉獣／宝玉兽」卡被放置的场合，可以将这张卡除外发动（伤害步骤也能发动）。选自己的魔法陷阱区的1张「宝玉獣／宝玉兽」怪兽卡特殊召唤。
