--- a/data/cards/63945693.yaml
+++ b/data/cards/63945693.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>虹<rt>にじ</rt></ruby>の<ruby>架<rt>か</rt></ruby>け<ruby>橋<rt>はし</rt></ruby>
   ja_romaji: Niji no Kakehashi
   ko: 무지개 가교
-  ko_rr:
+  ko_rr: Mujigae Gagyo
   zh-TW:
   zh-CN: 虹之桥梁
 text:
