--- a/data/cards/79856792.yaml
+++ b/data/cards/79856792.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>神<rt>しん</rt></ruby> レインボー・ドラゴン
   ja_romaji: Kyūkyoku Hōgyokushin Reinbō Doragon
   ko: 궁극보옥신 레인보우 드래곤
-  ko_rr: Gunggeukbo-oksin Raeinbeou Deuraegon
+  ko_rr: Gunggeukbooksin Reinbou Deuraegon
   zh-TW:
   zh-CN: 究极宝玉神 虹龙
 text:
