--- a/data/cards/84544192.yaml
+++ b/data/cards/84544192.yaml
@@ -9,8 +9,8 @@ name:
   pt: Sobremarcha do Dragão Arco-Íris Cristalino Definitivo
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>神<rt>しん</rt></ruby> レインボー・ドラゴン オーバー・ドライブ
   ja_romaji: Kyūkyoku Hōgyokushin Reinbō Doragon Ōbā Doraibu
-  ko:
-  ko_rr:
+  ko: 궁극보옥신 레인보우 드래곤 오버 드라이브
+  ko_rr: Gonggeukbooksin Reinbou Deuraegon Obeo Deuraibeu
   zh-TW:
   zh-CN: 究极宝玉神 彩虹龙·超越
 text:
@@ -35,7 +35,9 @@ text:
   ja: |-
     「究極宝玉神」モンスター＋「宝玉獣」モンスター×７
     自分が「究極宝玉神」モンスターの特殊召喚に成功しているデュエル中に、自分のフィールド・墓地の上記カードを除外した場合のみ特殊召喚できる。①：除外されている自分の「宝玉獣」モンスターが７種類以上の場合、このカードの攻撃力は７０００アップする。②：自分・相手ターンに、このターン戦闘を行っていないこのカードをリリースして発動できる。フィールドのカードを全て持ち主のデッキに戻し、除外されている自分の「宝玉獣」モンスターを任意の数だけ選んで特殊召喚する。
-  ko:
+  ko: |-
+    "궁극보옥신" 몬스터 ＋ "보옥수" 몬스터 × 7
+    자신이 "궁극보옥신" 몬스터의 특수 소환에 성공하고 있는 듀얼 중에, 자신의 필드 / 묘지의 상기 카드를 제외했을 경우에만 특수 소환할 수 있다. ①: 제외되어 있는 자신의 "보옥수" 몬스터가 7종류 이상일 경우, 이 카드의 공격력은 7000 올린다. ②: 자신 / 상대 턴에, 이 턴에 전투를 실행하지 않은 이 카드를 릴리스하고 발동할 수 있다. 필드의 카드를 전부 주인의 덱으로 되돌리고, 제외되어 있는 자신의 "보옥수" 몬스터를 임의의 수만큼 골라 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这张卡不能通常召唤。只有自己的场上、墓地有7种类「宝玉獣／宝玉兽」卡存在的场合才能特殊召唤。这张卡特殊召唤的回合，这张卡的①②效果不能发动。①：可以将自己场上的表侧表示的「宝玉獣／宝玉兽」怪兽全部送入墓地发动。这张卡的攻击力上升送入墓地的怪兽的数量×1000。这个效果在对手的回合也能发动。②：可以从自己的墓地将「宝玉獣／宝玉兽」怪兽全部除外发动。使场上的卡全部返回持有者的卡组。
