--- a/data/cards/87475570.yaml
+++ b/data/cards/87475570.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>先<rt>せん</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
   ja_romaji: Hōgyoku no Sendōsha
   ko: 보옥의 선도자
-  ko_rr:
+  ko_rr: Book-ui Seondoja
   zh-TW:
   zh-CN: 宝玉的先导者
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードをリリースして発動できる。「究極宝玉神」モンスター、「宝玉獣」モンスター、「宝玉」魔法・罠カードの内、いずれか１枚をデッキから手札に加える。
   ko: |-
-    ①: 이 카드를 릴리스하고 발동할 수 있다. 덱에서 "궁극보옥신" 몬스터, "보옥수" 몬스터, "보옥" 마법 / 함정 카드 중, 1장을 패에 넣는다.
+    ①: 이 카드를 릴리스하고 발동할 수 있다. "궁극보옥신" 몬스터, "보옥수" 몬스터, "보옥" 마법 / 함정 카드 중, 어느 1장을 덱에서 패에 넣는다.
   zh-TW:
   zh-CN: |-
     ①：把这张卡解放才能发动。从卡组把「究极宝玉神」怪兽、「宝玉兽」怪兽、「宝玉」魔法·陷阱卡之内任意1张加入手卡。
