--- a/data/cards/95600067.yaml
+++ b/data/cards/95600067.yaml
@@ -9,8 +9,8 @@ name:
   pt: Fera Cristalina Tigre Topázio
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> トパーズ・タイガー
   ja_romaji: Hōgyokujū Topāzu Taigā
-  ko: 보옥수토파즈타이거
-  ko_rr:
+  ko: 보옥수 토파즈 타이거
+  ko_rr: Booksu Topajeu Taigeo
   zh-TW:
   zh-CN: 宝玉兽 黄玉虎
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが相手モンスターに攻撃するダメージステップの間、このカードの攻撃力は４００アップする。②：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
   ko: |-
-    이 카드는 상대 몬스터에 공격할 경우, 데미지 스텝 동안 공격력을 400 포인트 올린다. 이 카드가 몬스터 카드 존 위에서 파괴되었을 경우, 묘지로 보내지 않고 지속 마법 카드로 취급하여 자신의 마법 & 함정 카드 존에 앞면 표시로 놓을 수 있다.
+    ①: 이 카드가 상대 몬스터에 공격하는 데미지 스텝 동안, 이 카드의 공격력은 400 올린다. ②: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     这张卡向对方怪兽攻击的场合，伤害步骤内，攻击力上升400。这张卡在怪兽卡区域上破坏的场合，可以不送去墓地当作永续魔法卡使用在自己的魔法与陷阱卡区域表侧表示放置。
