--- a/data/cards/07093411.yaml
+++ b/data/cards/07093411.yaml
@@ -9,8 +9,8 @@ name:
   pt: Fera Cristalina Pégaso Safira
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> サファイア・ペガサス
   ja_romaji: Hōgyokujū Safaia Pegasasu
-  ko: 보옥수사파이어페가수스
-  ko_rr:
+  ko: 보옥수 사파이어 페가수스
+  ko_rr: Booksu Sapai-eo Pegasuseu
   zh-TW:
   zh-CN: 宝玉兽 青玉飞马
 text:
