--- a/data/cards/12644061.yaml
+++ b/data/cards/12644061.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：フィールドの「宝玉獣」モンスター及び墓地の「宝玉獣」モンスターは全て闇属性になる。②：このカードがフィールドゾーンに存在する限り、「究極宝玉神」モンスターの攻撃対象になったモンスターの効果はそのバトルフェイズの間だけ無効化される。③：自分の「宝玉獣」モンスターの戦闘で自分が戦闘ダメージを受けるダメージ計算時に、デッキから「宝玉獣」モンスター１体を墓地へ送って発動できる。その戦闘で発生する自分への戦闘ダメージを０にする。
   ko: |-
-    ①: 필드의 "보옥수" 몬스터 및 묘지의 "보옥수" 몬스터는 전부 어둠 속성이 된다. ②: 이 카드가 필드 존에 존재하는 한, "궁극보옥신" 몬스터의 공격 대상이 된 몬스터의 효과는 그 배틀 페이즈 동안에만 무효화된다. ③: 자신의 "보옥수" 몬스터가 전투를 실행하는 데미지 계산시에, 덱에서 "보옥수" 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 전투로 발생하는 자신에게로의 전투 데미지를 0 으로 한다.
+    ①: 필드의 "보옥수" 몬스터 및 묘지의 "보옥수" 몬스터는 전부 어둠 속성이 된다. ②: 이 카드가 필드 존에 존재하는 한, "궁극보옥신" 몬스터의 공격 대상이 된 몬스터의 효과는 그 배틀 페이즈 동안에만 무효화된다. ③: 자신의 "보옥수" 몬스터의 전투로 자신이 전투 데미지를 받는 데미지 계산시에, 덱에서 "보옥수" 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 전투로 발생하는 자신에게로의 전투 데미지를 0 으로 한다.
   zh-TW:
   zh-CN: |-
     ①：场上的「宝玉兽」怪兽以及墓地的「宝玉兽」怪兽全部变成暗属性。②：只要这张卡在场地区域存在，成为「究极宝玉神」怪兽的攻击对象的怪兽的效果只在那次战斗阶段内无效化。③：自己的「宝玉兽」怪兽进行战斗的伤害计算时，从卡组把1只「宝玉兽」怪兽送去墓地才能发动。那次战斗发生的对自己的战斗伤害变成0。
