--- a/data/cards/12877076.yaml
+++ b/data/cards/12877076.yaml
@@ -9,8 +9,8 @@ name:
   pt: Despertar dos Definitivos Cristalinos
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>覚<rt>かく</rt></ruby><ruby>醒<rt>せい</rt></ruby>
   ja_romaji: Hōgyokushin Kakusei
-  ko:
-  ko_rr:
+  ko: 보옥신각성
+  ko_rr: Booksin-gakseong
   zh-TW:
   zh-CN: 宝玉神觉醒
 text:
@@ -48,7 +48,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：手札の「究極宝玉神」モンスター１体を相手に見せ、以下の効果から１つを選択して発動できる。または自分フィールドに「究極宝玉神」モンスターが存在する場合、以下の効果から１つ、または両方を選択して発動できる。
     ●デッキから「架け橋」カードまたは「オーバー・ザ・レインボー」１枚を選び、手札に加えるか墓地へ送る。
     ●自分の手札・デッキ・墓地の「宝玉獣」モンスター１体または自分の魔法＆罠ゾーンの「宝玉獣」モンスターカード１枚を選んで特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 패의 "궁극보옥신" 몬스터 1장을 상대에게 보여주고, 이하의 효과에서 1개를 선택하여 발동할 수 있다. 또는 자신 필드에 "궁극보옥신" 몬스터가 존재할 경우, 이하의 효과에서 1개, 또는 양쪽을 선택하고 발동할 수 있다.
+    ●덱에서 "가교" 카드 또는 "오버 더 레인보우" 1장을 고르고, 패에 넣거나 묘지로 보낸다.
+    ●자신의 패 / 덱 / 묘지의 "보옥수" 몬스터 1장 또는 자신의 마법 & 함정 존의 "보옥수" 몬스터 카드 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以向对手展示手牌的1只「究極宝玉神／究极宝玉神」怪兽，从以下的效果中选择1个发动。或者在自己场上有「究極宝玉神／究极宝玉神」怪兽存在的场合，可以从以下的效果中选择1个或者两方都发动。●从卡组选1张「架け橋／桥梁」卡或者「オーバー・ザ・レインボー／超越彩虹」加入手牌或送入墓地。●选自己的手牌、卡组或墓地的1只「宝玉獣／宝玉兽」怪兽或者自己的魔法陷阱区的1张「宝玉獣／宝玉兽」怪兽卡特殊召唤。
