--- a/data/cards/14469229.yaml
+++ b/data/cards/14469229.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
   ja_romaji: Hōgyoku no Shugosha
   ko: 보옥의 수호자
-  ko_rr:
+  ko_rr: Book-ui Suhoja
   zh-TW:
   zh-CN: 宝玉的守护者
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の「宝玉獣」モンスターが相手モンスターと戦闘を行うダメージ計算時、手札・フィールドのこのカードをリリースして発動できる。その戦闘を行う自分のモンスターは、攻撃力・守備力がダメージ計算時のみ元々の数値の倍になり、ダメージステップ終了時に破壊される。
   ko: |-
-    ①: 자신의 "보옥수" 몬스터가 상대 몬스터와 전투를 실행하는 데미지 계산시, 자신의 패 / 필드의 이 카드를 릴리스하고 발동할 수 있다. 그 전투를 실행하는 자신의 몬스터는, 공격력 / 수비력이 데미지 계산시에만 원래 수치의 배가 되고, 데미지 스텝 종료시에 파괴된다.
+    ①: 자신의 "보옥수" 몬스터가 상대 몬스터와 전투를 실행하는 데미지 계산시, 패 / 필드의 이 카드를 릴리스하고 발동할 수 있다. 그 전투를 실행하는 자신 몬스터는, 공격력 / 수비력이 데미지 계산시에만 원래 수치의 배가 되고, 데미지 스텝 종료시에 파괴된다.
   zh-TW:
   zh-CN: |-
     ①：自己的「宝玉兽」怪兽和对方怪兽进行战斗的伤害计算时，把自己的手卡·场上的这张卡解放才能发动。那只进行战斗的自己怪兽攻击力·守备力只在伤害计算时变成原本数值的2倍，伤害步骤结束时破坏。
@@ -56,7 +56,7 @@ pendulum_effect:
   ja: |-
     ①：このカードがＰゾーンに存在する限り、１ターンに１度だけ、自分フィールドの「究極宝玉神」モンスター及び「宝玉獣」カードは効果では破壊されない。
   ko: |-
-    ①: 이 카드가 펜듈럼 존에 존재하는 한, 1턴에 1번, 자신 필드의 "궁극보옥신" 몬스터 및 "보옥수" 카드는 효과로는 파괴되지 않는다.
+    ①: 이 카드가 펜듈럼 존에 존재하는 한, 1턴에 1번만, 자신 필드의 "궁극보옥신" 몬스터 및 "보옥수" 카드는 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
     ①：只要这张卡在灵摆区域存在，1回合1次，自己场上的「究极宝玉神」怪兽以及「宝玉兽」卡不会被效果破坏。
