--- a/data/cards/31044787.yaml
+++ b/data/cards/31044787.yaml
@@ -9,8 +9,8 @@ name:
   pt: Furão de Chamas
   ja: イタチの<ruby>大<rt>だい</rt></ruby><ruby>暴<rt>ぼう</rt></ruby><ruby>発<rt>はつ</rt></ruby>
   ja_romaji: Itachi no Daibōhatsu
-  ko: 족제비의대폭발
-  ko_rr:
+  ko: 족제비의 대폭발
+  ko_rr: Jokjebi-ui Daepokbal
   zh-TW:
   zh-CN: 鼬鼠大暴发
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：相手フィールドの表側表示モンスターの攻撃力を合計した数値が自分のＬＰよりも高い場合に発動できる。相手フィールドの表側表示モンスターの攻撃力を合計した数値が自分のＬＰ以下になるように、相手は自身のフィールドの攻撃力が０以外の表側表示モンスターを選んで持ち主のデッキに戻さなければならない。
   ko: |-
-    ①: 상대 필드의 앞면 표시 몬스터의 공격력의 합계가 자신의 LP보다도 높을 경우에 발동할 수 있다. 상대 필드의 앞면 표시 몬스터의 공격력의 합계가, 자신의 LP 이하의 수치가 되도록, 상대는 자신 필드의 앞면 표시 몬스터를 골라 주인의 덱으로 되돌려야 한다.
+    ①: 상대 필드의 앞면 표시 몬스터의 공격력을 합계한 수치가 자신의 LP보다도 높을 경우에 발동할 수 있다. 상대 필드의 앞면 표시 몬스터의 공격력을 합계한 수치가 자신의 LP 이하가 되도록, 상대는 자신 필드의 공격력이 0 이외인 앞면 표시 몬스터를 고르고 주인의 덱으로 되돌려야 한다.
   zh-TW:
   zh-CN: |-
     ①：对方场上的表侧表示怪兽的攻击力合计比自己基本分高的场合才能发动。直到对方场上的表侧表示怪兽的攻击力合计变成自己基本分以下的数值为止，对方必须选自身场上的表侧表示怪兽回到持有者卡组。
