--- a/data/cards/32933942.yaml
+++ b/data/cards/32933942.yaml
@@ -9,8 +9,8 @@ name:
   pt: Fera Cristalina Gata Ametista
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> アメジスト・キャット
   ja_romaji: Hōgyokujū Amejisuto Kyatto
-  ko: 보옥수애머지스트캣
-  ko_rr:
+  ko: 보옥수 애머지스트 캣
+  ko_rr: Booksu Aemeojiseuteu Kaet
   zh-TW:
   zh-CN: 宝玉兽 紫晶猫
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードは直接攻撃できる。その直接攻撃で相手に与える戦闘ダメージは半分になる。②：表側表示のこのカードがモンスターゾーンで破壊された場合、墓地へ送らずに永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く事ができる。
   ko: |-
-    이 카드는 상대 플레이어에게 직접 공격할 수 있다. 이때, 이 카드가 상대 라이프에 주는 전투 데미지는 절반이 된다. 이 카드가 몬스터 카드 존 위에서 파괴되었을 경우, 묘지로 보내지 않고 지속 마법 카드로 취급하여 자신의 마법 & 함정 카드 존에 앞면 표시로 놓을 수 있다.
+    ①: 이 카드는 직접 공격할 수 있다. 그 직접 공격으로 상대에게 주는 전투 데미지는 절반이 된다. ②: 앞면 표시의 이 카드가 몬스터 존에서 파괴되었을 경우, 묘지로 보내지 않으며 지속 마법 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓을 수 있다.
   zh-TW:
   zh-CN: |-
     这张卡可以直接攻击对方玩家。这个时候，这张卡给与对方基本分的战斗伤害变成一半。这张卡在怪兽卡区域上破坏的场合，可以不送去墓地当作永续魔法卡使用在自己的魔法与陷阱卡区域表侧表示放置。
