--- a/data/cards/34487429.yaml
+++ b/data/cards/34487429.yaml
@@ -59,7 +59,7 @@ text:
   ja: |-
     ①：自分の魔法＆罠ゾーンの「宝玉獣」カードの数によって以下の効果を得る。●１枚以上：このカードは効果では破壊されない。●２枚以上：１ターンに１度、自分への戦闘ダメージを半分にできる。●３枚以上：魔法・罠カードの発動時、自分フィールドの表側表示の「宝玉獣」モンスター１体を墓地へ送って発動できる。その発動を無効にし破壊する。●４枚以上：１ターンに１度、発動できる。自分は１枚ドローする。●５枚：１ターンに１度、自分の魔法＆罠ゾーンの「宝玉獣」カード１枚を対象として発動できる。そのカードを特殊召喚する。
   ko: |-
-    자신의 마법 & 함정 카드 존의 "보옥수"라는 이름이 붙은 카드의 수에 따라, 이 카드는 이하의 효과를 얻는다. ●1장 이상 : 이 카드는 카드의 효과로는 파괴되지 않는다. ●2장 이상 : 1턴에 1번, 자신이 받는 전투 데미지를 절반으로 할 수 있다. ●3장 이상 : 자신의 몬스터 카드 존의 "보옥수"라는 이름이 붙은 몬스터 1장을 묘지로 보내는 것으로, 마법 / 함정 카드의 발동을 무효로 하고 파괴한다. ●4장 이상 : 1턴에 1번, 자신의 메인 페이즈시에 덱에서 카드를 1장 드로우할 수 있다. ●5장 : 1턴에 1번, 자신의 메인 페이즈시에 마법 & 함정 카드 존의 "보옥수"라는 이름이 붙은 카드 1장을 선택하고 특수 소환할 수 있다.
+    ①: 자신의 마법 & 함정 존의 "보옥수" 카드의 수에 따라 이하의 효과를 얻는다. ●1장 이상: 이 카드는 효과로는 파괴되지 않는다. ●2장 이상: 1턴에 1번, 자신에게로의 전투 데미지를 절반으로 할 수 있다. ●3장 이상: 마법 / 함정 카드의 발동시, 자신 필드의 앞면 표시의 "보옥수" 몬스터 1장을 묘지로 보내고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ●4장 이상: 1턴에 1번, 발동할 수 있다. 자신은 1장 드로우한다. ●5장: 1턴에 1번, 자신의 마법 & 함정 존의 "보옥수" 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     ①：得到自己的魔法与陷阱区域的「宝玉兽」卡数量的以下效果。●1张以上：这张卡不会被效果破坏。●2张以上：1回合1次，可以把对自己的战斗伤害变成一半。●3张以上：魔法·陷阱卡的发动时，把自己场上1只表侧表示的「宝玉兽」怪兽送去墓地才能发动。那个发动无效并破坏。●4张以上：1回合1次，可以发动。自己抽1张。●5张：1回合1次，以自己的魔法与陷阱区域的1张「宝玉兽」卡为对象才能发动。那张卡特殊召唤。
