--- a/data/cards/37440988.yaml
+++ b/data/cards/37440988.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>究<rt>きゅう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>神<rt>しん</rt></ruby> レインボー・オーバー・ドラゴン
   ja_romaji: Kyūkyoku Hōgyokushin Reinbō Ōbā Doragon
   ko: 궁극보옥신 레인보우 오버 드래곤
-  ko_rr:
+  ko_rr: Gonggeukbooksin Reinbou Obeo Deuraegon
   zh-TW:
   zh-CN: 究极宝玉神 虹桥龙
 text:
@@ -43,7 +43,8 @@ text:
     このカードは融合召喚及び以下の方法でのみ特殊召喚できる。●自分フィールドのレベル１０の「究極宝玉神」モンスター１体をリリースした場合にＥＸデッキから特殊召喚できる。①：１ターンに１度、自分の墓地から「宝玉獣」モンスター１体を除外して発動できる。このカードの攻撃力はターン終了時まで、除外したモンスターの攻撃力分アップする。②：融合召喚したこのカードをリリースして発動できる。フィールドのカードを全て持ち主のデッキに戻す。この効果は相手ターンでも発動できる。
   ko: |-
     "보옥수" 몬스터 × 7
-    이 카드는 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다. ●자신 필드의 레벨 10 인 "궁극보옥신" 몬스터 1장을 릴리스했을 경우에 엑스트라 덱에서 특수 소환할 수 있다("융합"은 필요로 하지 않는다). ①: 1턴에 1번, 자신 묘지에서 "보옥수" 몬스터 1장을 제외하고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지, 제외한 몬스터의 공격력만큼 올린다. ②: 융합 소환한 이 카드를 릴리스하고 발동할 수 있다. 필드의 카드를 전부 주인의 덱으로 되돌린다. 이 효과는 상대 턴에도 발동할 수 있다.
+    이 카드는 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다. ●자신 필드의 레벨 10 인 "궁극보옥신" 몬스터 1장을 릴리스했을 경우에 엑스트라 덱에서 특수 소환할 수 있다.
+    ①: 1턴에 1번, 자신 묘지에서 "보옥수" 몬스터 1장을 제외하고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지, 제외한 몬스터의 공격력만큼 올린다. ②: 융합 소환한 이 카드를 릴리스하고 발동할 수 있다. 필드의 카드를 전부 주인의 덱으로 되돌린다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     「宝玉兽」怪兽×7
