--- a/data/cards/40854824.yaml
+++ b/data/cards/40854824.yaml
@@ -10,7 +10,7 @@ name:
   ja: オーバー・ザ・レインボー
   ja_romaji: Ōbā Za Reinbō
   ko: 오버 더 레인보우
-  ko_rr:
+  ko_rr: Obeo Deo Reinbou
   zh-TW:
   zh-CN: 飞越虹桥
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：元々のカード名が「究極宝玉神 レインボー・ドラゴン」または「究極宝玉神 レインボー・ダーク・ドラゴン」となるモンスターが自分フィールドで効果を発動したターンに発動できる。デッキから「宝玉獣」モンスターを任意の数だけ特殊召喚する（同名カードは１枚まで）。
   ko: |-
-    ①: 자신 필드의, 원래의 카드명이 "궁극보옥신 레인보우 드래곤" 또는 "궁극보옥신 레인보우 다크 드래곤"이 되는 몬스터가 효과를 발동한 턴에 발동할 수 있다. 덱에서 "보옥수" 몬스터를 임의의 수만큼 특수 소환한다(같은 이름의 카드는 1장까지).
+    ①: 원래의 카드명이 "궁극보옥신 레인보우 드래곤" 또는 "궁극보옥신 레인보우 다크 드래곤"이 되는 몬스터가 자신 필드에서 효과를 발동한 턴에 발동할 수 있다. 덱에서 "보옥수" 몬스터를 임의의 수만큼 특수 소환한다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN: |-
     ①：自己场上的原本卡名是「究极宝玉神 虹龙」或者「究极宝玉神 虹暗龙」的怪兽把效果发动的回合才能发动。从卡组把「宝玉兽」怪兽任意数量特殊召唤（同名卡最多1张）。
