--- a/data/cards/47121070.yaml
+++ b/data/cards/47121070.yaml
@@ -9,8 +9,8 @@ name:
   pt: Par de Cristal
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>双<rt>そう</rt></ruby><ruby>璧<rt>へき</rt></ruby>
   ja_romaji: Hōgyoku no Sōheki
-  ko: 보윽의 쌍벽
-  ko_rr:
+  ko: 보옥의 쌍벽
+  ko_rr: Book-ui Ssangbyeok
   zh-TW:
   zh-CN: 宝玉的双璧
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の「宝玉獣」モンスターが戦闘で破壊され墓地へ送られた時に発動できる。デッキから「宝玉獣」モンスター１体を選んで永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置き、このターン自分が受ける戦闘ダメージは０になる。
   ko: |-
-    자신 필드 위에 존재하는 "보옥수"라는 이름이 붙은 몬스터가 전투에 의해서 파괴되어 묘지로 보내졌을 때 발동할 수 있다. 덱에서 "보옥수"라는 이름이 붙은 몬스터 1장을 지속 마법 카드로 취급하고 자신의 마법 & 함정 카드 존에 앞면 표시로 놓는다. 이 턴에 자신이 받는 전투 데미지는 0 이 된다.
+    ①: 자신의 "보옥수" 몬스터가 전투로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 덱에서 "보옥수" 몬스터 1장을 골라 지속 마법 카드로 취급하여 자신의 마법 & 함정 존에 앞면 표시로 놓고, 이 턴에 자신이 받는 전투 데미지는 0 이 된다.
   zh-TW:
   zh-CN: |-
     自己场上存在的名字带有「宝玉兽」的怪兽被战斗破坏送去墓地时才能发动。从卡组把1只名字带有「宝玉兽」的怪兽当作永续魔法卡使用在自己的魔法与陷阱卡区域表侧表示放置。这个回合，自己受到的战斗伤害变成0。
