--- a/data/cards/47149093.yaml
+++ b/data/cards/47149093.yaml
@@ -9,8 +9,8 @@ name:
   pt: Brilho Cristalino
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>玲<rt>れい</rt></ruby><ruby>瓏<rt>ろう</rt></ruby>
   ja_romaji: Hōgyoku no Reirō
-  ko:
-  ko_rr:
+  ko: 보옥의 영롱
+  ko_rr: Book-ui Yeongnong
   zh-TW:
   zh-CN: 宝玉的玲珑
 text:
@@ -28,7 +28,8 @@ text:
     Você só pode controlar 1 "Brilho Cristalino". Cada monstro "Fera Cristalina" que você controla ganha ATK igual à sua DEF original. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas, mesmo durante a Etapa de Dano: você pode enviar este card com a face para cima para o Cemitério; Invoque por Invocação-Especial 1 monstro "Fera Cristalina" da sua mão ou do Cemitério e, além disso, qualquer dano que você sofrer neste turno é diminuído pela metade.
   ja: |-
     ①：「宝玉の玲瓏」は自分フィールドに１枚しか表側表示で存在できない。②：自分フィールドの「宝玉獣」モンスターの攻撃力は、その元々の守備力分アップする。③：自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、魔法＆罠ゾーンの表側表示のこのカードを墓地へ送って発動できる（ダメージステップでも発動可能）。自分の手札・墓地から「宝玉獣」モンスター１体を選んで特殊召喚する。このターン、自分が受ける全てのダメージは半分になる。
-  ko:
+  ko: |-
+    ①: "보옥의 영롱"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 자신 필드의 "보옥수" 몬스터의 공격력은, 그 원래 수비력만큼 올린다. ③: 자신의 마법 & 함정 존에 "보옥수" 카드가 놓여졌을 경우, 마법 & 함정 존의 앞면 표시의 이 카드를 묘지로 보내고 발동할 수 있다(데미지 스텝에도 발동 가능). 자신의 패 / 묘지에서 "보옥수" 몬스터 1장을 고르고 특수 소환한다. 이 턴에, 자신이 받는 모든 데미지는 절반이 된다.
   zh-TW:
   zh-CN: |-
     ①：「宝玉の玲瓏／宝玉的玲珑」在自己的场上只能有1张以表侧表示存在。②：自己场上的「宝玉獣／宝玉兽」怪兽的攻击力上升其原守备力的数值。③：自己的魔法陷阱区有「宝玉獣／宝玉兽」卡被放置的场合，可以将魔法陷阱区的表侧表示的这张卡送入墓地发动（伤害步骤也能发动）。从自己的手牌或墓地选1只「宝玉獣／宝玉兽」怪兽特殊召唤。这个回合，自己受到的全部伤害变为一半。
