--- a/data/cards/60876124.yaml
+++ b/data/cards/60876124.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の魔法＆罠ゾーンに「宝玉獣」カードが２枚以上存在する場合に発動できる。自分の魔法＆罠ゾーンの「宝玉獣」カード１枚を相手が選ぶ。相手が選んだカードを墓地へ送り、自分はデッキから２枚ドローする。
   ko: |-
-    ①: 자신의 마법 & 함정 존의 "보옥수" 카드가 2장 이상 존재할 경우에 발동할 수 있다. 자신의 마법 & 함정 존의 "보옥수" 카드 1장을 상대가 고른다. 상대가 고른 카드를 묘지로 보내고, 자신은 덱에서 2장 드로우한다.
+    ①: 자신의 마법 & 함정 존에 "보옥수" 카드가 2장 이상 존재할 경우에 발동할 수 있다. 자신의 마법 & 함정 존의 "보옥수" 카드 1장을 상대가 고른다. 상대가 고른 카드를 묘지로 보내고, 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
     ①：自己的魔法与陷阱区域的「宝玉兽」卡2张以上存在的场合才能发动。自己的魔法与陷阱区域1张「宝玉兽」卡由对方选出。对方选的卡送去墓地，自己从卡组抽2张。
