--- a/data/cards/95326659.yaml
+++ b/data/cards/95326659.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>導<rt>みちび</rt></ruby>き
   ja_romaji: Hōgyoku no Michibiki
   ko: 보옥의 인도
-  ko_rr:
+  ko_rr: Book-ui Indo
   zh-TW:
   zh-CN: 宝玉的引导
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：デッキから「宝玉獣」モンスター１体を特殊召喚する。この効果は自分の魔法＆罠ゾーンに「宝玉獣」カードが２枚以上存在する場合に発動と処理ができる。
   ko: |-
-    자신의 마법 & 함정 카드 존에 "보옥수"라는 이름이 붙은 카드가 2장 이상 존재할 경우, 덱에서 "보옥수"라는 이름이 붙은 몬스터 1장을 특수 소환한다.
+    ①: 덱에서 "보옥수" 몬스터 1장을 특수 소환한다. 이 효과는 자신의 마법 & 함정 존에 "보옥수" 카드가 2장 이상 존재할 경우에 발동과 처리를 할 수 있다.
   zh-TW:
   zh-CN: |-
     自己的魔法与陷阱卡区域有名字带有「宝玉兽」的卡2张以上存在的场合，从卡组把1只名字带有「宝玉兽」的怪兽特殊召唤。
