--- a/data/cards/93504463.yaml
+++ b/data/cards/93504463.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>進<rt>しん</rt></ruby><ruby>化<rt>か</rt></ruby>への<ruby>懸<rt>か</rt></ruby>け<ruby>橋<rt>はし</rt></ruby>
   ja_romaji: Shinka e no Kakehashi
-  ko: 진화의 가교
+  ko: 진화의 현교
   ko_rr:
   zh-TW:
   zh-CN: 通向进化的吊桥
