--- a/data/cards/24701066.yaml
+++ b/data/cards/24701066.yaml
@@ -12,7 +12,7 @@ name:
   ko: 무한기동 리바스톰
   ko_rr: Muhan-gidong Ribaseutom
   zh-TW:
-  zh-CN: 无限起动 大河式风击龙
+  zh-CN: 无限起动 大河风暴
 text:
   en: |-
     2 Level 5 monsters
@@ -52,11 +52,8 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 기계족 / 땅 속성 몬스터 1장을 고르고, 패에 넣거나 묘지로 보낸다. ②: 이 카드가 전투로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 그 몬스터를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다. ③: 이 카드가 묘지에 존재할 경우, 자신 필드의 기계족 링크 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    5星怪兽×2
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：把这张卡1个超量素材取除才能发动。从卡组选1只机械族·地属性怪兽加入手卡或送去墓地。
-    ②：这张卡战斗破坏对方怪兽时才能发动。那只怪兽在这张卡下面重叠作为超量素材。
-    ③：这张卡在墓地存在的场合，把自己场上1只机械族连接怪兽解放才能发动。这张卡守备表示特殊召唤。
+    等级5怪兽×2
+    此卡名的①③效果1回合仅可各使用1次。①：去除此卡的1个超量素材可以发动。从牌组挑选1只机械族・地属性怪兽，加入手牌或送至墓地。②：此卡战斗破坏对手怪兽时可以发动。将该怪兽重叠在此卡下方作为超量素材。③：此卡存在于墓地的情况下，解放自己场上的1只机械族连接怪兽可以发动。将此卡以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: EARTH
@@ -122,6 +119,11 @@ sets:
     set_name: 'Deck Build Pack: Infinity Chasers'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC031
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
