--- a/data/cards/27094595.yaml
+++ b/data/cards/27094595.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 招手的墓场
 text:
   en: |-
-    A Graveyard that serves as a power source for zombies.
+    A graveyard that serves as a power source for zombies.
   de:
   es: |-
     Un cementerio que sirve como fuente de energía a los zombis.
