--- a/data/cards/80275707.yaml
+++ b/data/cards/80275707.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 小丑鸟 欢笑海鹦
 text:
   en: |-
-    If face-up Spell/Trap is on the field: You can Special Summon this card from your hand. You can Tribute 1 Winged Beast monster, then target 1 face-up Spell/Trap on the field; return that face-up card to the hand, but for the rest of this turn, you cannot activate cards, or the effects of cards, with the same name that card had once it returned to the hand. This is a Quick Effect if all monsters you control are Winged Beast monsters. You can only use each effect of "Laughing Puffin the Jester Bird" once per turn.
+    If a face-up Spell/Trap is on the field: You can Special Summon this card from your hand. You can Tribute 1 Winged Beast monster, then target 1 face-up Spell/Trap on the field; return that face-up card to the hand, but for the rest of this turn, you cannot activate cards, or the effects of cards, with the same name that card had once it returned to the hand. This is a Quick Effect if all monsters you control are Winged Beast monsters. You can only use each effect of "Laughing Puffin the Jester Bird" once per turn.
   de:
   es:
   fr:
