--- a/data/cards/59741415.yaml
+++ b/data/cards/59741415.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와는 카드명이 다른 "머시너즈" 몬스터 1장을 패 / 덱에서 특수 소환하고, 대상 몬스터를 파괴한다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 몬스터 및 제외되어 있는 자신 몬스터 중에서, 기계족 몬스터 3장을 대상으로 하여 발동할 수 있다. 그 몬스터를 덱에 넣고 셔플한다. 그 후, 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：以自己场上1只机械族怪兽为对象才能发动。和那只怪兽卡名不同的1只「机甲」怪兽从手卡·卡组特殊召唤，作为对象的怪兽破坏。
-    ②：把墓地的这张卡除外，从自己墓地的怪兽以及除外的自己怪兽之中以3只机械族怪兽为对象才能发动。那些怪兽加入卡组洗切。那之后，自己从卡组抽1张。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：以自己场上的1只机械族怪兽为对象可以发动。将1只卡名与该怪兽不同的"机甲部队"怪兽从手牌・牌组特殊召唤，破坏对象怪兽。②：将墓地的此卡除外，从自己墓地的怪兽及被除外的自己的怪兽中，以3只机械族怪兽为对象可以发动。将该怪兽加入牌组洗牌。然后自己从牌组抽1张。
 card_type: Trap
 property: Normal
 series:
@@ -75,6 +73,11 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: TM01-SC018
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
