--- a/data/cards/86852702.yaml
+++ b/data/cards/86852702.yaml
@@ -52,10 +52,9 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 선택하고 발동할 수 있다. ●패를 1장 버리고 발동할 수 있다. 덱에서 "머시너즈" 몬스터 2장을 패에 넣는다(같은 이름의 카드는 1장까지). ●패에서 "머시너즈" 카드 1장을 버리고 발동할 수 있다. 덱에서 "머시너즈 리포메이션" 이외의 "머시너즈" 카드 2장을 패에 넣는다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：可以从以下效果选择1个发动。
-    ●丢弃1张手卡才能发动。从卡组把2只「机甲」怪兽加入手卡（同名卡最多1张）。
-    ●从手卡丢弃1张「机甲」卡才能发动。从卡组把「机甲部队的再编制」以外的2张「机甲」卡加入手卡（同名卡最多1张）。
+    此卡名的卡1回合仅可发动1张。①：可从以下效果中选择1个发动。
+    ●舍弃1张手牌可以发动。从牌组将2只"机甲部队"怪兽加入手牌（同名卡最多1张）。
+    ●从手牌将1张"机甲部队"卡舍弃可以发动。从牌组将"机甲部队的再编制"以外的2张"机甲部队"卡加入手牌（同名卡最多1张）。
 card_type: Spell
 property: Normal
 series:
@@ -96,6 +95,11 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC015
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
