--- a/data/cards/96462121.yaml
+++ b/data/cards/96462121.yaml
@@ -32,8 +32,7 @@ text:
     ①: 자신 필드의 기계족 엑시즈 몬스터는 상대 효과의 대상이 되지 않는다. ②: 1턴에 1번, 자신 필드의 "무한기동" 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 자신 몬스터보다 랭크가 2개 높은 기계족 엑시즈 몬스터 1장을, 대상 몬스터의 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 기계족 / 땅 속성 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上的机械族超量怪兽不会成为对方的效果的对象。
-    ②：1回合1次，以自己场上1只「无限起动」超量怪兽为对象才能发动。比那只自己怪兽阶级高2阶的1只机械族超量怪兽在作为对象的怪兽上面重叠当作超量召唤从额外卡组特殊召唤。这个效果的发动后，直到回合结束时自己不是机械族·地属性怪兽不能特殊召唤。
+    ①：自己场上的机械族超量怪兽不会成为对手效果的对象。②：1回合1次，以自己场上的1只"无限起动"超量怪兽为对象可以发动。将1只阶级比该自己的怪兽高2的机械族超量怪兽重叠在对象怪兽上面，视为超量召唤从额外牌组特殊召唤。此效果发动后，直至回合结束时为止，自己仅可特殊召唤机械族・地属性怪兽。
 card_type: Spell
 property: Continuous
 sets:
@@ -94,6 +93,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: TM01-SC036
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
