--- a/data/cards/17322533.yaml
+++ b/data/cards/17322533.yaml
@@ -12,7 +12,7 @@ name:
   ko: 일점착지
   ko_rr: Iljeomchanji
   zh-TW:
-  zh-CN: 定点着陆
+  zh-CN: 一点着地
 text:
   en: |-
     If exactly 1 monster is Special Summoned, from the hand to your field: You can draw 1 card. You can only use this effect of "Pinpoint Landing" once per turn. During your End Phase, if you have not drawn a card by this effect this turn, send this card to the GY.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 또는 상대의 패에서 자신 필드에, 몬스터 1장만이 특수 소환되었을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 자신 턴에 이 카드의 ①의 효과로 드로우하고 있지 않을 경우, 그 턴의 엔드 페이즈에 이 카드는 묘지로 보내진다.
   zh-TW:
   zh-CN: |-
-    自己场上只有怪兽1只从手卡特殊召唤的场合：自己可以从卡组抽1张卡。「定点着陆」的这个效果1回合只能使用1次。在自己结束阶段时，这个回合自己没有因这个效果抽卡的场合，把这张卡送去墓地。
+    此卡名的①效果1回合仅可使用1次。①：从自己或对手的手牌将仅1只怪兽特殊召唤至自己场上的情况下可以发动。自己从牌组抽1张。②：在自己回合未用此卡的①的效果抽牌的情况下，此卡将在该回合的结束阶段被送至墓地。
 card_type: Spell
 property: Continuous
 sets:
@@ -71,6 +71,11 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SCTP-SC146
+    set_name: Entry Pack Volume 9
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
