--- a/data/cards/34559295.yaml
+++ b/data/cards/34559295.yaml
@@ -12,7 +12,7 @@ name:
   ko: 아이언드로우
   ko_rr: Aieondeurou
   zh-TW:
-  zh-CN: 钢铁抽卡
+  zh-CN: 钢铁抽牌
 text:
   en: |-
     If you control exactly 2 Machine Effect Monsters and no other monsters: Draw 2 cards. For the rest of this turn after this card resolves, you can only Special Summon once. You can only activate 1 "Iron Draw" per turn.
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 몬스터가 기계족 효과 몬스터 2장뿐일 경우에 발동할 수 있다. 자신은 덱에서 2장 드로우한다. 이 카드의 발동 후, 턴 종료시까지 자신은 1회밖에 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：自己场上的怪兽只有机械族效果怪兽2只的场合才能发动。自己从卡组抽2张。这张卡的发动后，直到回合结束时自己只能有1次把怪兽特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：自己场上的怪兽仅为2只机械族效果怪兽的情况下可以发动。自己从牌组抽2张。此卡发动后，直至回合结束时为止，自己仅可特殊召唤怪兽1次。
 card_type: Spell
 property: Normal
 sets:
@@ -118,6 +117,11 @@ sets:
     - Rare
   - set_number: SR10-KR027
     set_name: 'Structure Deck R: Machiners Command'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC145
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
