--- a/data/cards/50619462.yaml
+++ b/data/cards/50619462.yaml
@@ -32,7 +32,7 @@ text:
     "오합무상"은 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에서 원래의 종족이 야수족 / 야수전사족 / 비행야수족인 앞면 표시 몬스터 1장을 묘지로 보내고 발동할 수 있다. 묘지로 보낸 그 몬스터와 원래의 종족이 같은 몬스터 1장을 엑스트라 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터는 공격할 수 없으며, 효과는 무효화되고, 엔드 페이즈에 파괴된다.
   zh-TW:
   zh-CN: |-
-    「乌合无象」在1回合只能发动1张。①：从自己场上把1只原本种族是兽族·兽战士族·鸟兽族的表侧表示怪兽送去墓地才能发动。原本种族和送去墓地的那只怪兽相同的1只怪兽从额外卡组特殊召唤。这个效果特殊召唤的怪兽不能攻击，效果无效化，结束阶段破坏。
+    此卡名的卡1回合仅可发动1张。①：从自己场上将1只原本种族为兽族・兽战士族・鸟兽族的表侧表示怪兽送至墓地可以发动。将原本种族与送至墓地的怪兽相同的1只怪兽从额外牌组特殊召唤。以此效果特殊召唤的怪兽不可攻击，效果无效化，将在结束阶段被破坏。
 card_type: Spell
 property: Quick-Play
 sets:
@@ -95,6 +95,11 @@ sets:
     set_name: Extra Pack 2016
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SCTP-SC144
+    set_name: Entry Pack Volume 9
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
