--- a/data/cards/09581215.yaml
+++ b/data/cards/09581215.yaml
@@ -90,6 +90,10 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: 22TP-JP415
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: DANE-KR077
     set_name: Dark Neostorm
