--- a/data/cards/97940434.yaml
+++ b/data/cards/97940434.yaml
@@ -142,6 +142,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Common
+  - set_number: 22TP-JP401
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Super Rare
   ko:
   - set_number: EXP4-KR036
     set_name: Extra Pack Volume 4
