--- a/data/cards/03814632.yaml
+++ b/data/cards/03814632.yaml
@@ -12,7 +12,7 @@ name:
   ko: 초거대 공중궁전 강가리다이
   ko_rr:
   zh-TW:
-  zh-CN: 超巨大空中宫殿 钟声协和号
+  zh-CN: 超巨大空中宫殿 冈加里迪亚
 text:
   en: |-
     2 Level 10 monsters
@@ -40,8 +40,8 @@ text:
     이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 상대 필드 위의 카드 1장을 선택하여 파괴하고, 상대 라이프에 1000 포인트 데미지를 준다. "초거대 공중궁전 강가리다이"의 효과는 1턴에 1번밖에 사용할 수 없고, 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다.
   zh-TW:
   zh-CN: |-
-    10星怪兽×2
-    这个卡名的效果1回合只能使用1次，这个效果发动的回合，这张卡不能攻击。①：把这张卡1个XYZ素材取除，以对方场上1张卡为对象才能发动。那张对方的卡破坏，给与对方1000伤害。
+    等级10怪兽×2
+    此卡名的效果1回合仅可使用1次，发动此效果的回合中，此卡不可攻击。①：去除此卡的1个超量素材，以对手场上的1张卡为对象可以发动。将该对手的卡破坏，给予对手1000伤害。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: WIND
@@ -113,6 +113,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: SCTP-SC140
+    set_name: Entry Pack Volume 9
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
