--- a/data/cards/14469229.yaml
+++ b/data/cards/14469229.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 宝玉的守护者
 text:
   en: |-
-    If a "Crystal Beast" monster you control battles an opponent's monster, during damage calculation (Quick Effect): You can Tribute this card from your hand or face-up from your field; your battling monster's ATK/DEF become double its original ATK/DEF during that damage calculation only, but it is destroyed at the end of this Damage Step.
+    If a "Crystal Beast" monster you control battles an opponent's monster, during damage calculation (Quick Effect): You can Tribute this card from your hand or face-up field; your battling monster's ATK/DEF become double its original ATK/DEF during that damage calculation only, but it is destroyed at the end of this Damage Step.
   de: |-
     Falls ein „Kristallungeheuer“-Monster, das du kontrollierst, gegen ein Monster eines Gegners kämpft, während der Schadensberechnung (Schnelleffekt): Du kannst diese Karte von deiner Hand oder offen von deiner Spielfeldseite als Tribut anbieten; die ATK/DEF deines kämpfenden Monsters werden nur während der Schadensberechnung zum Doppelten seiner Grund-ATK/-DEF, aber es wird am Ende dieses Damage Steps zerstört.
   es: |-
