--- a/data/cards/19684740.yaml
+++ b/data/cards/19684740.yaml
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 2개 제거하고 발동할 수 있다. 이 카드 이외의 필드의 카드를 전부 주인의 패로 되돌린다. 이 효과의 발동에 대하여 상대는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    6星怪兽×3
-    ①：1回合1次，把这张卡2个XYZ素材取除才能发动。这张卡以外的场上的卡全部回到持有者手卡。对方不能对应这个效果的发动把魔法·陷阱·效果怪兽的效果发动。
+    等级6怪兽×3
+    ①：1回合1次，去除此卡的2个超量素材可以发动。将场上此卡以外的卡全部放回持有者的手牌。应对此效果的发动，对手不可发动魔法・陷阱・怪兽的效果。
 card_type: Monster
 monster_type_line: Plant / Xyz / Effect
 attribute: EARTH
@@ -87,6 +87,11 @@ sets:
   ko:
   - set_number: LVAL-KR055
     set_name: Legacy of the Valiant
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC139
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
