--- a/data/cards/22423493.yaml
+++ b/data/cards/22423493.yaml
@@ -12,7 +12,7 @@ name:
   ko: 클리포트 게니우스
   ko_rr:
   zh-TW:
-  zh-CN: 机壳守护神 路径灵
+  zh-CN: 机壳・盖尼乌斯
 text:
   en: |-
     2 Machine monsters
@@ -41,9 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     机械族怪兽2只
-    ①：连接召唤的这张卡不受魔法·陷阱卡的效果影响，也不受这张卡以外的连接怪兽发动的效果影响。
-    ②：1回合1次，以这张卡以外的自己以及对方场上的表侧表示的卡各1张为对象才能发动。那2张卡的效果直到回合结束时无效。
-    ③：这张卡所连接区有怪兽2只同时特殊召唤时才能发动。从卡组把1只5星以上的机械族怪兽加入手卡。
+    ①：连接召唤的此卡不受魔法・陷阱卡的效果影响，也不受此卡以外的连接怪兽发动的效果影响。②：1回合1次，以自己及对手场上此卡以外的表侧表示卡各1张为对象可以发动。将该2张卡的效果直至回合结束时为止无效。③：2只怪兽被同时特殊召唤至此卡连接端时可以发动。从牌组将1只等级5以上的机械族怪兽加入手牌。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: EARTH
@@ -110,6 +108,11 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC091
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
