--- a/data/cards/31044787.yaml
+++ b/data/cards/31044787.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 鼬鼠大暴发
 text:
   en: |-
-    If the combined ATK of all face-up monsters your opponent controls is higher than your LP: Make your opponent shuffle monsters they control into the Deck (their choice), so that the combined ATK of the remaining monsters they control becomes less than or equal to your LP.
+    If the combined ATK of all face-up monsters your opponent controls is higher than your LP: Make your opponent shuffle face-up monsters they control into the Deck (their choice), except monsters with 0 ATK, so that the combined ATK of the remaining monsters they control becomes less than or equal to your LP.
   de: |-
     Falls die Summe der ATK aller offenen Monster, die dein Gegner kontrolliert, höher ist als deine LP: Lass deinen Gegner Monster, die er kontrolliert, ins Deck mischen (er bestimmt), so dass die Summe der ATK der verbleibenden Monster, die er kontrolliert, kleiner oder gleich deinen LP wird.
   es: |-
