--- a/data/cards/37364101.yaml
+++ b/data/cards/37364101.yaml
@@ -32,7 +32,7 @@ text:
     엑시즈 소재를 가지고 있는 엑시즈 몬스터에만 장착 가능. 장착 몬스터의 공격력은 자신 필드 위의 엑시즈 소재의 수 × 600 포인트 올리고, 상대 몬스터와의 전투에 의해서 상대 라이프에 주는 전투 데미지는 배가 된다. 또한, 장착 몬스터는 효과를 발동할 수 없다. 이 카드는 상대의 엔드 페이즈시에 묘지로 보내진다. 이 카드가 필드 위에서 벗어났을 때, 장착 몬스터를 파괴한다. "스토익 챌린지"는 자신 필드 위에 1장밖에 앞면 표시로 존재할 수 없다.
   zh-TW:
   zh-CN: |-
-    持有XYZ素材的XYZ怪兽才能装备。装备怪兽的攻击力上升自己场上的XYZ素材数量×600的数值，和对方怪兽的战斗给与对方基本分的战斗伤害变成2倍。此外，装备怪兽不能把效果发动。这张卡在对方的结束阶段时送去墓地。这张卡从场上离开时，装备怪兽破坏。「克己挑战」在自己场上只能有1张表侧表示存在。
+    仅可装备于持有超量素材的超量怪兽。①："克己挑战"在自己场上仅可有1张以表侧表示存在。②：装备怪兽不可发动效果，攻击力上升相当于自己场上超量素材数量×600的数值，因与对手怪兽战斗而给予对手的战斗伤害变为两倍。③：在对手的结束阶段发动。将此卡送至墓地。④：装备于怪兽的此卡离开场上时，装备怪兽将被破坏。
 card_type: Spell
 property: Equip
 sets:
@@ -69,6 +69,11 @@ sets:
   ko:
   - set_number: CPZ1-KR045
     set_name: 'Collectors Pack: ZEXAL Version'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC143
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
