--- a/data/cards/37694547.yaml
+++ b/data/cards/37694547.yaml
@@ -12,7 +12,7 @@ name:
   ko: 기어 타운
   ko_rr: Gieo Taun
   zh-TW:
-  zh-CN: 齿车街
+  zh-CN: 齿轮镇
 text:
   en: |-
     Both players can Normal Summon "Ancient Gear" monsters for 1 less Tribute. When this card is destroyed and sent to the GY: You can Special Summon 1 "Ancient Gear" monster from your hand, Deck, or GY.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 필드 존에 존재하는 한, 양쪽 플레이어는 "앤틱 기어" 몬스터를 일반 소환할 경우에 필요한 릴리스를 1장 적게 할 수 있다. ②: 이 카드가 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "앤틱 기어" 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：只要这张卡在场地区域存在，双方玩家可以把「古代的机械」怪兽召唤的场合需要的解放减少1只。②：这张卡被破坏送去墓地时才能发动。从自己的手卡·卡组·墓地选1只「古代的机械」怪兽特殊召唤。
+    ①：此卡只要存在于场地区域，双方玩家召唤"古代机械齿轮"怪兽的情况下所必须的解放数量可减少1只。②：此卡被破坏并被送至墓地时可以发动。从自己的手牌・牌组・墓地挑选1只"古代机械齿轮"怪兽特殊召唤。
 card_type: Spell
 property: Field
 sets:
@@ -189,6 +189,11 @@ sets:
     - Normal Parallel Rare
   - set_number: LVP3-KR020
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC051
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
