--- a/data/cards/40216089.yaml
+++ b/data/cards/40216089.yaml
@@ -12,7 +12,7 @@ name:
   ko: 플라티나 가제트
   ko_rr: Peullatina Gajeteu
   zh-TW:
-  zh-CN: 白金零件
+  zh-CN: 白金小工具
 text:
   en: |-
     2 Machine monsters
@@ -41,9 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     机械族怪兽2只
-    这个卡名的①②的效果1回合各能使用1次。这张卡在连接召唤的回合不能作为连接素材。
-    ①：自己主要阶段才能发动。从手卡把1只4星以下的机械族怪兽在作为这张卡所连接区的自己场上特殊召唤。
-    ②：这张卡被战斗·效果破坏的场合才能发动。从卡组把1只4星「零件」怪兽特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。此卡在被连接召唤的回合不可作为连接素材。①：在自己的主要阶段可以发动。从手牌将1只等级4以下的机械族怪兽特殊召唤至此卡连接端的自己场上。②：此卡因战斗・效果被破坏的情况下可以发动。从牌组将1只等级4的"小工具"怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: LIGHT
@@ -95,6 +93,11 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC043
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
