--- a/data/cards/41172955.yaml
+++ b/data/cards/41172955.yaml
@@ -12,7 +12,7 @@ name:
   ko: 그린 가제트
   ko_rr: Geurin Gajeteu
   zh-TW: 綠色齒輪
-  zh-CN: 绿色零件
+  zh-CN: 绿色小工具
 text:
   en: |-
     When this card is Normal or Special Summoned: You can add 1 "Red Gadget" from your Deck to your hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     当此卡成功召唤、特殊召唤时，可从牌组中抽取1只「紅色齒輪」加入手牌。
   zh-CN: |-
-    ①：这张卡召唤·特殊召唤成功时才能发动。从卡组把1只「红色零件」加入手卡。
+    ①：此卡召唤・特殊召唤成功时可以发动。从牌组将1只"红色小工具"加入手牌。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -285,6 +285,11 @@ sets:
   zh-TW:
   - set_number: SD18-TC015
     set_name: 'Structure Deck: Machiners Command'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC040
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
