--- a/data/cards/42600274.yaml
+++ b/data/cards/42600274.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사이버 츄츄본
   ko_rr:
   zh-TW:
-  zh-CN: 电子化芭蕾练习裙
+  zh-CN: 电子舞裙球球
 text:
   en: |-
     You can Special Summon this card (from your hand) by Tributing 1 Warrior or Fairy-Type monster from your hand or field. If this card is Tributed for a Ritual Summon: You can target 1 Ritual Spell Card in your Graveyard; add it to your hand.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드는 자신의 패 / 필드에서 전사족 또는 천사족 몬스터 1장을 릴리스하고 패에서 특수 소환할 수 있다. ②: 이 카드가 의식 소환을 위해 릴리스되었을 경우, 자신 묘지의 의식 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡可以从自己的手卡·场上把1只战士族或者天使族怪兽解放从手卡特殊召唤。②：这张卡为仪式召唤而被解放的场合，以自己墓地1张仪式魔法卡为对象才能发动。那张卡加入手卡。
+    ①：此卡可从自己的手牌・场上解放1只战士族或天使族怪兽，来从手牌特殊召唤。②：此卡为仪式召唤而被解放的情况下，以自己墓地的1张仪式魔法卡为对象可以发动。将该卡加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
@@ -116,6 +116,11 @@ sets:
   ko:
   - set_number: RATE-KR010
     set_name: Raging Tempest
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC135
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
