--- a/data/cards/58054262.yaml
+++ b/data/cards/58054262.yaml
@@ -12,7 +12,7 @@ name:
   ko: 머시너즈 포스
   ko_rr: Meosineojeu Poseu
   zh-TW: 機甲武裝
-  zh-CN: 机甲部队·武装力量
+  zh-CN: 机甲部队・武力
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by "Commander Covington". You must pay 1000 LP to declare an attack with this card. You can send this card you control to the GY, then target 1 "Machina Soldier", "Machina Sniper", and "Machina Defender" in your GY; Special Summon those targets.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡不可通常召唤。仅可透过「督戰官柯賓頓」的效果特殊召唤。此卡必须支付1000点生命值才可进行攻击宣言。将场上的此卡送入墓地，并可从我方墓地中选择「機甲士兵」「機甲狙擊兵」「機甲防衛兵」各1只发动。特殊召唤被选择的怪兽。
   zh-CN: |-
-    这张卡不能通常召唤。「督战官 科文顿」的效果才能特殊召唤。①：这张卡若不支付1000基本分则不能攻击宣言。②：把场地的这张卡送去墓地，以自己墓地的「机甲士兵」「机甲狙击兵」「机甲卫兵」各1只为对象才能发动。那些怪兽特殊召唤。
+    此卡不可通常召唤。仅可以"督战官 科温顿"的效果特殊召唤。①：此卡必须支付1000LP才可以攻击宣言。②：将场上的此卡送至墓地，以自己墓地的"机甲部队・士兵"、"机甲部队・狙击兵"、"机甲部队・防卫兵"各1只为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -129,6 +129,11 @@ sets:
   zh-TW:
   - set_number: SD18-TC009
     set_name: 'Structure Deck: Machiners Command'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: TM01-SC010
+    set_name: 'Theme Pack: War of Infinite Machine'
     rarities:
     - Common
 limit_regulation:
