--- a/data/cards/65079854.yaml
+++ b/data/cards/65079854.yaml
@@ -32,7 +32,7 @@ text:
     "블랙 로즈 드래곤" 또는 식물족 몬스터에만 장착 가능. 장착 몬스터의 공격력은 600 포인트 올린다. 장착 몬스터가 수비 표시 몬스터를 공격했을 때, 그 수비력을 공격력이 넘었으면, 그 수치만큼 상대 라이프에 전투 데미지를 준다. 장착 몬스터가 몬스터를 공격했을 경우, 데미지 계산 후에 공격 대상 몬스터의 공격력/수비력은 600 포인트 내린다. 장착 몬스터와 전투를 실행한 상대 몬스터는, 그 전투에서는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    「黑蔷薇龙」或者植物族怪兽才能装备。装备怪兽的攻击力上升600。装备怪兽向守备表示怪兽攻击时，若攻击力超过那个守备力，给与对方基本分那个数值的战斗伤害。装备怪兽向怪兽攻击的场合，伤害计算后攻击对象怪兽的攻击力·守备力下降600。和装备怪兽进行战斗的对方怪兽不会被那次战斗破坏。
+    仅可装备于"黑蔷薇龙"或植物族怪兽。①：装备怪兽的攻击力上升600。②：与装备怪兽进行战斗的对手怪兽不会因该战斗被破坏。③：装备怪兽攻击守备表示怪兽的情况下，依攻击力超出该怪兽守备力的数值来给予对手战斗伤害。④：装备怪兽攻击了怪兽的伤害计算后发动。攻击对象怪兽的攻击力・守备力下降600。
 card_type: Spell
 property: Equip
 sets:
@@ -105,6 +105,11 @@ sets:
   ko:
   - set_number: RGBT-KR047
     set_name: Raging Battle
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC141
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
