--- a/data/cards/79606837.yaml
+++ b/data/cards/79606837.yaml
@@ -40,10 +40,8 @@ text:
     ①: 이 카드가 몬스터 존에 존재하는 한, 서로의 패 / 덱에서 묘지로 보내지는 몬스터는 묘지로는 가지 않으며 제외된다. ②: 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때, 이 카드를 릴리스하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ③: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 의식 몬스터 1장 또는 의식 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    ①：只要这张卡在怪兽区域存在，从双方的手卡·卡组送去墓地的怪兽不去墓地除外。
-    ②：怪兽的效果·魔法·陷阱卡发动时，把这张卡解放才能发动。那个发动无效并破坏。
-    ③：这张卡被送去墓地的场合才能发动。从卡组把1只仪式怪兽或者1张仪式魔法卡加入手卡。
+    协调＋1只以上协调以外的怪兽
+    ①：只要此卡存在于怪兽区域，从双方手牌・牌组被送往墓地的怪兽不去墓地而直接被除外。②：怪兽的效果・魔法・陷阱卡发动时，解放此卡可以发动。将该发动无效并破坏。③：此卡被送至墓地的情况下可以发动。从牌组将1只仪式怪兽或1张仪式魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Synchro / Effect
 attribute: LIGHT
@@ -168,6 +166,11 @@ sets:
     - Rare
   - set_number: LVP3-KR022
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SCTP-SC137
+    set_name: Entry Pack Volume 9
     rarities:
     - Common
 limit_regulation:
