--- a/data/cards/84224627.yaml
+++ b/data/cards/84224627.yaml
@@ -40,8 +40,8 @@ text:
     ① : 이 카드가 물 속성 몬스터를 엑시즈 소재로서 가지고 있을 경우, 이 카드는 전투로는 파괴되지 않는다. ② : 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 필드의 랭크 4 이하의 엑시즈 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력 / 수비력을 턴 종료시까지 원래 수치의 배로 한다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    2星怪兽×2。
-    ①：这张卡持有水属性怪兽作为XYZ素材的场合，这张卡不会被战斗破坏。②：1回合1次，把这张卡1个XYZ素材取除，以自己场上1只4阶以下的XYZ怪兽为对象才能发动。那只怪兽的攻击力·守备力直到回合结束时变成原本数值的2倍。这个效果在对方回合也能发动。
+    等级2怪兽×2
+    ①：此卡持有水属性怪兽作为超量素材的情况下，此卡不会因战斗被破坏。②：1回合1次，去除此卡的1个超量素材，以自己场上1只阶级4以下的超量怪兽为对象可以发动。该怪兽的攻击力・守备力直至回合结束时为止，改成原本数值的两倍。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Beast / Xyz / Effect
 attribute: WATER
@@ -86,6 +86,11 @@ sets:
   ko:
   - set_number: PP10-KR016
     set_name: Premium Pack Vol.10
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: SCTP-SC132
+    set_name: Entry Pack Volume 9
     rarities:
     - Super Rare
 limit_regulation:
