--- a/data/cards/92719314.yaml
+++ b/data/cards/92719314.yaml
@@ -31,7 +31,7 @@ text:
     이 카드는 일반 소환 / 세트할 수 없다. 자신의 묘지에 어둠 속성 몬스터가 5장 이상 존재하고, 자신 필드 위에 몬스터가 존재하지 않을 경우에 특수 소환할 수 있다. 자신 묘지의 어둠 속성 몬스터 1장을 게임에서 제외하는 것으로, 자신 묘지의 어둠 속성 몬스터 1장을 특수 소환한다. 이 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤。自己墓地有暗属性怪兽5只以上存在，自己场上没有怪兽存在的场合可以特殊召唤。1回合1次，可以通过把自己墓地1只暗属性怪兽从游戏中除外，选择自己墓地1只暗属性怪兽特殊召唤。
+    此卡不可通常召唤。自己墓地有5只以上暗属性怪兽存在，且自己场上不存在怪兽的情况下可以特殊召唤。①：1回合1次，将自己墓地的1只暗属性怪兽除外，以自己墓地的1只暗属性怪兽为对象可以发动。将该暗属性怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: DARK
@@ -108,6 +108,11 @@ sets:
     set_name: Phantom Darkness
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SCTP-SC134
+    set_name: Entry Pack Volume 9
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
