--- a/data/cards/94253609.yaml
+++ b/data/cards/94253609.yaml
@@ -2,7 +2,7 @@ konami_id: 6681
 password: 94253609
 name:
   en: Elemental Absorber
-  de: Elementarer Absorber
+  de: Elementar-Absorber
   es: Absorbedor Elemental
   fr: Absorbeur Élémentaire
   it: Risucchio Elementale
